/**
 * Follow this process to write e2e tests for the CLI project:
 *
 * 1. Test if all the necessary mocks for your tests already exist.
 *    In mock mode, run the command you want to test with the same arguments
 *    and parameters exactly as you want to test it, for example:
 *
 *    $ FRODO_MOCK=1 frodo conn save https://openam-frodo-dev.forgeblocks.com/am volker.scheuber@forgerock.com Sup3rS3cr3t!
 *
 *    If your command completes without errors and with the expected results,
 *    all the required mocks already exist and you are good to write your
 *    test and skip to step #4.
 *
 *    If, however, your command fails and you see errors like the one below,
 *    you know you need to record the mock responses first:
 *
 *    [Polly] [adapter:node-http] Recording for the following request is not found and `recordIfMissing` is `false`.
 *
 * 2. Record mock responses for your exact command.
 *    In mock record mode, run the command you want to test with the same arguments
 *    and parameters exactly as you want to test it, for example:
 *
 *    $ FRODO_MOCK=record frodo conn save https://openam-frodo-dev.forgeblocks.com/am volker.scheuber@forgerock.com Sup3rS3cr3t!
 *
 *    Wait until you see all the Polly instances (mock recording adapters) have
 *    shutdown before you try to run step #1 again.
 *    Messages like these indicate mock recording adapters shutting down:
 *
 *    Polly instance 'conn/4' stopping in 3s...
 *    Polly instance 'conn/4' stopping in 2s...
 *    Polly instance 'conn/save/3' stopping in 3s...
 *    Polly instance 'conn/4' stopping in 1s...
 *    Polly instance 'conn/save/3' stopping in 2s...
 *    Polly instance 'conn/4' stopped.
 *    Polly instance 'conn/save/3' stopping in 1s...
 *    Polly instance 'conn/save/3' stopped.
 *
 * 3. Validate your freshly recorded mock responses are complete and working.
 *    Re-run the exact command you want to test in mock mode (see step #1).
 *
 * 4. Write your test.
 *    Make sure to use the exact command including number of arguments and params.
 *
 * 5. Commit both your test and your new recordings to the repository.
 *    Your tests are likely going to reside outside the frodo-lib project but
 *    the recordings must be committed to the frodo-lib project.
 */

/*
// Cloud
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir0
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo config-manager pull oauth2-agents --directory configManagerExportOauth2AgentsDir5 -f test/e2e/fr-config-manager-pull-config/oauth2-agents.json

// ForgeOps
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_REALM=bravo FRODO_HOST=https://nightly.gcp.forgeops.com/am frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir3 -n frodo-web-test-agent -m forgeops

*/

import { getEnv, testExport } from './utils/TestUtils';
import { connection as c, forgeops_connection as fc } from './utils/TestConfig';

process.env['FRODO_MOCK'] = '1';
process.env['FRODO_CONNECTION_PROFILES_PATH'] =
    './test/e2e/env/Connections.json';
const env = getEnv(c);
const forgeopsEnv = getEnv(fc);
const configFile = 'test/e2e/fr-config-manager-pull-config/oauth2-agents.json';


describe('frodo config-manager pull oauth2-agents', () => {
    test('"frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir0": should export all agents from all realms in fr-config manager style.', async () => {
        const dirName = 'configManagerExportOauth2AgentsDir0';
        const CMD = `frodo config-manager pull oauth2-agents -D ${dirName}`;
        await testExport(CMD, env, undefined, undefined, dirName, false);
    });
    test('"frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir3 -n frodo-web-test-agent -m forgeops": should export only the agent with the name: "frodo-web-test-agent" from bravo realm.', async () => {
        const dirName = 'configManagerExportOauth2AgentsDir3';
        const agentName = 'frodo-web-test-agent';
        const CMD = `frodo config-manager pull oauth2-agents -D ${dirName} -n ${agentName} -m forgeops`;
        await testExport(CMD, { env: {...forgeopsEnv.env, FRODO_REALM: 'bravo' } }, undefined, undefined, dirName, false);
    });
    test(`"frodo config-manager pull oauth2-agents --directory configManagerExportOauth2AgentsDir5 -f ${configFile}": should export all the agents defined in the config file.`, async () => {
        const dirName = 'configManagerExportOauth2AgentsDir5';
        const CMD = `frodo config-manager pull oauth2-agents --directory ${dirName} -f ${configFile}`;
        await testExport(CMD, env, undefined, undefined, dirName, false);
    });
});