// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents --directory configManagerExportOauth2AgentsDir5 -f test/e2e/fr-config-manager-pull-config/oauth2-agents.json": should export all the agents defined in the config file. 1`] = `0`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents --directory configManagerExportOauth2AgentsDir5 -f test/e2e/fr-config-manager-pull-config/oauth2-agents.json": should export all the agents defined in the config file. 2`] = `""`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents --directory configManagerExportOauth2AgentsDir5 -f test/e2e/fr-config-manager-pull-config/oauth2-agents.json": should export all the agents defined in the config file.: configManagerExportOauth2AgentsDir5/realms/alpha/realm-config/agents/2.2_Agent/my-policy-agent.json 1`] = `
{
  "_id": "my-policy-agent",
  "_rev": "-504717871",
  "_type": {
    "_id": "2.2_Agent",
    "collection": true,
    "name": "Policy Agents",
  },
  "cdssoRootUrl": [],
  "description": null,
  "status": "Active",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents --directory configManagerExportOauth2AgentsDir5 -f test/e2e/fr-config-manager-pull-config/oauth2-agents.json": should export all the agents defined in the config file.: configManagerExportOauth2AgentsDir5/realms/alpha/realm-config/agents/IdentityGatewayAgent/cdsso-ig-agent.json 1`] = `
{
  "_id": "cdsso-ig-agent",
  "_rev": "-1524382492",
  "_type": {
    "_id": "IdentityGatewayAgent",
    "collection": true,
    "name": "Identity Gateway Agents",
  },
  "agentgroup": null,
  "igCdssoLoginUrlTemplate": null,
  "igCdssoRedirectUrls": [
    "https://volker-demo.encore.forgerock.com:443/apps/hrlite/redirect",
    "https://volker-demo.encore.forgerock.com/apps/hrlite/redirect",
    "https://volker-demo.encore.forgerock.com:443/apps/hrlite-rest/redirect",
    "https://volker-demo.encore.forgerock.com:443/apps/contractor/redirect",
    "https://volker-demo.encore.forgerock.com/apps/hrlite-rest/redirect",
    "https://volker-demo.encore.forgerock.com/apps/contractor/redirect",
  ],
  "igTokenIntrospection": "Realm_Subs",
  "secretLabelIdentifier": null,
  "status": "Active",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents --directory configManagerExportOauth2AgentsDir5 -f test/e2e/fr-config-manager-pull-config/oauth2-agents.json": should export all the agents defined in the config file.: configManagerExportOauth2AgentsDir5/realms/alpha/realm-config/agents/IdentityGatewayAgent/frodo-test-ig-agent.json 1`] = `
{
  "_id": "frodo-test-ig-agent",
  "_rev": "-1490423122",
  "_type": {
    "_id": "IdentityGatewayAgent",
    "collection": true,
    "name": "Identity Gateway Agents",
  },
  "agentgroup": "test_ig_group",
  "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
  "igCdssoRedirectUrls": [
    "http://testurl.com:8080/frodo",
  ],
  "igTokenIntrospection": "Realm",
  "secretLabelIdentifier": null,
  "status": "Inactive",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents --directory configManagerExportOauth2AgentsDir5 -f test/e2e/fr-config-manager-pull-config/oauth2-agents.json": should export all the agents defined in the config file.: configManagerExportOauth2AgentsDir5/realms/alpha/realm-config/agents/IdentityGatewayAgent/frodo-test-ig-agent2.json 1`] = `
{
  "_id": "frodo-test-ig-agent2",
  "_rev": "1365023305",
  "_type": {
    "_id": "IdentityGatewayAgent",
    "collection": true,
    "name": "Identity Gateway Agents",
  },
  "agentgroup": null,
  "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
  "igCdssoRedirectUrls": [
    "http://testurl.com:8080/frodo",
  ],
  "igTokenIntrospection": "Realm",
  "secretLabelIdentifier": null,
  "status": "Inactive",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents --directory configManagerExportOauth2AgentsDir5 -f test/e2e/fr-config-manager-pull-config/oauth2-agents.json": should export all the agents defined in the config file.: configManagerExportOauth2AgentsDir5/realms/alpha/realm-config/agents/IdentityGatewayAgent/ig-agent.json 1`] = `
{
  "_id": "ig-agent",
  "_rev": "-1566320906",
  "_type": {
    "_id": "IdentityGatewayAgent",
    "collection": true,
    "name": "Identity Gateway Agents",
  },
  "agentgroup": null,
  "igCdssoLoginUrlTemplate": null,
  "igCdssoRedirectUrls": [],
  "igTokenIntrospection": "Realm_Subs",
  "secretLabelIdentifier": null,
  "status": "Active",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents --directory configManagerExportOauth2AgentsDir5 -f test/e2e/fr-config-manager-pull-config/oauth2-agents.json": should export all the agents defined in the config file.: configManagerExportOauth2AgentsDir5/realms/alpha/realm-config/agents/J2EEAgent/frodo-test-java-agent.json 1`] = `
{
  "_id": "frodo-test-java-agent",
  "_rev": "1131793354",
  "_type": {
    "_id": "J2EEAgent",
    "collection": true,
    "name": "J2EE Agents",
  },
  "advancedJ2EEAgentConfig": {
    "alternativeAgentHostname": null,
    "alternativeAgentPort": null,
    "alternativeAgentProtocol": null,
    "clientHostnameHeader": null,
    "clientIpHeader": null,
    "customProperties": [],
    "expiredSessionCacheSize": 500,
    "expiredSessionCacheTTL": 20,
    "fragmentRelayUri": null,
    "idleTimeRefreshWindow": 1,
    "jwtCacheSize": 5000,
    "jwtCacheTTL": 30,
    "missingPostDataPreservationEntryUri": [
      "",
    ],
    "monitoringToCSV": false,
    "policyCachePerUser": 50,
    "policyCacheSize": 5000,
    "policyClientPollingInterval": 3,
    "possibleXssCodeElements": [
      "",
    ],
    "postDataCacheTtlMin": 5,
    "postDataPreservation": false,
    "postDataPreserveCacheEntryMaxEntries": 1000,
    "postDataPreserveCacheEntryMaxTotalSizeMb": -1,
    "postDataPreserveMultipartLimitBytes": 104857600,
    "postDataPreserveMultipartParameterLimitBytes": 104857600,
    "postDataStickySessionKeyValue": null,
    "postDataStickySessionMode": "URL",
    "retainPreviousOverrideBehavior": true,
    "sessionCacheTTL": 15,
    "ssoExchangeCacheSize": 100,
    "ssoExchangeCacheTTL": 5,
    "xssDetectionRedirectUri": {},
  },
  "amServicesJ2EEAgent": {
    "agentAdviceEncode": false,
    "amLoginUrl": [],
    "authServiceHost": "testurl.com",
    "authServicePort": 8080,
    "authServiceProtocol": "http",
    "authSuccessRedirectUrl": false,
    "conditionalLoginUrl": [
      "",
    ],
    "conditionalLogoutUrl": [
      "",
    ],
    "customLoginEnabled": false,
    "legacyLoginUrlList": [
      "",
    ],
    "overridePolicyEvaluationRealmEnabled": false,
    "policyEvaluationApplication": "iPlanetAMWebAgentService",
    "policyEvaluationRealm": "/",
    "policyNotifications": true,
    "restrictToRealm": {},
    "strategyWhenAMUnavailable": "EVAL_NER_USE_CACHE_UNTIL_EXPIRED_ELSE_503",
    "urlPolicyEnvGetParameters": [
      "",
    ],
    "urlPolicyEnvJsessionParameters": [
      "",
    ],
    "urlPolicyEnvPostParameters": [
      "",
    ],
  },
  "applicationJ2EEAgentConfig": {
    "applicationLogoutUris": {},
    "clientIpValidationMode": {
      "": "OFF",
    },
    "clientIpValidationRange": {},
    "continuousSecurityCookies": {},
    "continuousSecurityHeaders": {},
    "cookieAttributeMultiValueSeparator": "|",
    "cookieAttributeUrlEncoded": true,
    "headerAttributeDateFormat": "EEE, d MMM yyyy hh:mm:ss z",
    "invertNotEnforcedIps": false,
    "invertNotEnforcedUris": false,
    "logoutEntryUri": {},
    "logoutIntrospection": false,
    "logoutRequestParameters": {},
    "notEnforcedFavicon": true,
    "notEnforcedIps": [
      "",
    ],
    "notEnforcedIpsCacheEnabled": true,
    "notEnforcedIpsCacheSize": 1000,
    "notEnforcedRuleCompoundSeparator": "|",
    "notEnforcedUris": [
      "",
    ],
    "notEnforcedUrisCacheEnabled": true,
    "notEnforcedUrisCacheSize": 1000,
    "profileAttributeFetchMode": "NONE",
    "profileAttributeMap": {},
    "resourceAccessDeniedUri": {},
    "responseAttributeFetchMode": "NONE",
    "responseAttributeMap": {},
    "sessionAttributeFetchMode": "NONE",
    "sessionAttributeMap": {},
  },
  "globalJ2EEAgentConfig": {
    "agentConfigChangeNotificationsEnabled": true,
    "agentgroup": null,
    "auditAccessType": "LOG_NONE",
    "auditLogLocation": "REMOTE",
    "cdssoRootUrl": [
      "agentRootURL=http://testurl.com:8080/",
    ],
    "configurationReloadInterval": 0,
    "customResponseHeader": {},
    "debugLevel": "error",
    "debugLogfilePrefix": null,
    "debugLogfileRetentionCount": -1,
    "debugLogfileRotationMinutes": -1,
    "debugLogfileRotationSize": 52428800,
    "debugLogfileSuffix": "-yyyy.MM.dd-HH.mm.ss",
    "filterMode": {
      "": "ALL",
    },
    "fqdnCheck": false,
    "fqdnDefault": "testurl.com",
    "fqdnMapping": {},
    "httpSessionBinding": true,
    "jwtName": "am-auth-jwt",
    "lbCookieEnabled": false,
    "lbCookieName": "amlbcookie",
    "localAuditLogRotation": false,
    "localAuditLogfileRetentionCount": -1,
    "localAuditRotationSize": 52428800,
    "loginAttemptLimit": 0,
    "loginAttemptLimitCookieName": "amFilterParam",
    "preAuthCookieMaxAge": 300,
    "preAuthCookieName": "amFilterCDSSORequest",
    "recheckAmUnavailabilityInSeconds": 5,
    "redirectAttemptLimit": 0,
    "redirectAttemptLimitCookieName": "amFilterRDParam",
    "repositoryLocation": "centralized",
    "secretLabelIdentifier": null,
    "status": "Inactive",
    "userAttributeName": "employeenumber",
    "userMappingMode": "USER_ID",
    "userPrincipalFlag": false,
    "userTokenName": "UserToken",
    "webSocketConnectionIntervalInMinutes": 30,
  },
  "miscJ2EEAgentConfig": {
    "agent302RedirectContentType": "application/json",
    "agent302RedirectEnabled": true,
    "agent302RedirectHttpData": "{redirect:{requestUri:%REQUEST_URI%,requestUrl:%REQUEST_URL%,targetUrl:%TARGET%}}",
    "agent302RedirectInvertEnabled": false,
    "agent302RedirectNerList": [
      "",
    ],
    "agent302RedirectStatusCode": 200,
    "authFailReasonParameterName": null,
    "authFailReasonParameterRemapper": {},
    "authFailReasonUrl": null,
    "gotoParameterName": "goto",
    "gotoUrl": null,
    "ignorePathInfo": false,
    "legacyRedirectUri": "/agent/sunwLegacySupportURI",
    "legacyUserAgentList": [
      "Mozilla/4.7*",
    ],
    "legacyUserAgentSupport": false,
    "localeCountry": "US",
    "localeLanguage": "en",
    "loginReasonMap": {},
    "loginReasonParameterName": null,
    "portCheckEnabled": false,
    "portCheckFile": "PortCheckContent.txt",
    "portCheckSetting": {
      "8080": "http",
    },
    "unwantedHttpUrlParams": [
      "",
    ],
    "unwantedHttpUrlRegexParams": [
      "",
    ],
    "wantedHttpUrlParams": [
      "",
    ],
    "wantedHttpUrlRegexParams": [
      "",
    ],
  },
  "ssoJ2EEAgentConfig": {
    "acceptIPDPCookie": false,
    "acceptSsoTokenDomainList": [
      "",
    ],
    "acceptSsoTokenEnabled": false,
    "authExchangeCookieName": null,
    "authExchangeUri": null,
    "cdssoDomainList": [
      "",
    ],
    "cdssoRedirectUri": "/agent/post-authn-redirect",
    "cdssoSecureCookies": false,
    "cookieResetDomains": {},
    "cookieResetEnabled": false,
    "cookieResetNames": [
      "",
    ],
    "cookieResetPaths": {},
    "encodeCookies": false,
    "excludedUserAgentsList": [],
    "httpOnly": true,
    "setCookieAttributeMap": {},
    "setCookieInternalMap": {},
  },
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents --directory configManagerExportOauth2AgentsDir5 -f test/e2e/fr-config-manager-pull-config/oauth2-agents.json": should export all the agents defined in the config file.: configManagerExportOauth2AgentsDir5/realms/alpha/realm-config/agents/J2EEAgent/frodo-test-java-agent2.json 1`] = `
{
  "_id": "frodo-test-java-agent2",
  "_rev": "561894916",
  "_type": {
    "_id": "J2EEAgent",
    "collection": true,
    "name": "J2EE Agents",
  },
  "advancedJ2EEAgentConfig": {
    "alternativeAgentHostname": null,
    "alternativeAgentPort": null,
    "alternativeAgentProtocol": null,
    "clientHostnameHeader": null,
    "clientIpHeader": null,
    "customProperties": [],
    "expiredSessionCacheSize": 500,
    "expiredSessionCacheTTL": 20,
    "fragmentRelayUri": null,
    "idleTimeRefreshWindow": 1,
    "jwtCacheSize": 5000,
    "jwtCacheTTL": 30,
    "missingPostDataPreservationEntryUri": [
      "",
    ],
    "monitoringToCSV": false,
    "policyCachePerUser": 50,
    "policyCacheSize": 5000,
    "policyClientPollingInterval": 3,
    "possibleXssCodeElements": [
      "",
    ],
    "postDataCacheTtlMin": 5,
    "postDataPreservation": false,
    "postDataPreserveCacheEntryMaxEntries": 1000,
    "postDataPreserveCacheEntryMaxTotalSizeMb": -1,
    "postDataPreserveMultipartLimitBytes": 104857600,
    "postDataPreserveMultipartParameterLimitBytes": 104857600,
    "postDataStickySessionKeyValue": null,
    "postDataStickySessionMode": "URL",
    "retainPreviousOverrideBehavior": true,
    "sessionCacheTTL": 15,
    "ssoExchangeCacheSize": 100,
    "ssoExchangeCacheTTL": 5,
    "xssDetectionRedirectUri": {},
  },
  "amServicesJ2EEAgent": {
    "agentAdviceEncode": false,
    "amLoginUrl": [],
    "authServiceHost": "testurl.com",
    "authServicePort": 8080,
    "authServiceProtocol": "http",
    "authSuccessRedirectUrl": false,
    "conditionalLoginUrl": [
      "",
    ],
    "conditionalLogoutUrl": [
      "",
    ],
    "customLoginEnabled": false,
    "legacyLoginUrlList": [
      "",
    ],
    "overridePolicyEvaluationRealmEnabled": false,
    "policyEvaluationApplication": "iPlanetAMWebAgentService",
    "policyEvaluationRealm": "/",
    "policyNotifications": true,
    "restrictToRealm": {},
    "strategyWhenAMUnavailable": "EVAL_NER_USE_CACHE_UNTIL_EXPIRED_ELSE_503",
    "urlPolicyEnvGetParameters": [
      "",
    ],
    "urlPolicyEnvJsessionParameters": [
      "",
    ],
    "urlPolicyEnvPostParameters": [
      "",
    ],
  },
  "applicationJ2EEAgentConfig": {
    "applicationLogoutUris": {},
    "clientIpValidationMode": {
      "": "OFF",
    },
    "clientIpValidationRange": {},
    "continuousSecurityCookies": {},
    "continuousSecurityHeaders": {},
    "cookieAttributeMultiValueSeparator": "|",
    "cookieAttributeUrlEncoded": true,
    "headerAttributeDateFormat": "EEE, d MMM yyyy hh:mm:ss z",
    "invertNotEnforcedIps": false,
    "invertNotEnforcedUris": false,
    "logoutEntryUri": {},
    "logoutIntrospection": false,
    "logoutRequestParameters": {},
    "notEnforcedFavicon": true,
    "notEnforcedIps": [
      "",
    ],
    "notEnforcedIpsCacheEnabled": true,
    "notEnforcedIpsCacheSize": 1000,
    "notEnforcedRuleCompoundSeparator": "|",
    "notEnforcedUris": [
      "",
    ],
    "notEnforcedUrisCacheEnabled": true,
    "notEnforcedUrisCacheSize": 1000,
    "profileAttributeFetchMode": "NONE",
    "profileAttributeMap": {},
    "resourceAccessDeniedUri": {},
    "responseAttributeFetchMode": "NONE",
    "responseAttributeMap": {},
    "sessionAttributeFetchMode": "NONE",
    "sessionAttributeMap": {},
  },
  "globalJ2EEAgentConfig": {
    "agentConfigChangeNotificationsEnabled": true,
    "agentgroup": null,
    "auditAccessType": "LOG_NONE",
    "auditLogLocation": "REMOTE",
    "cdssoRootUrl": [
      "agentRootURL=http://testurl.com:8080/",
    ],
    "configurationReloadInterval": 0,
    "customResponseHeader": {},
    "debugLevel": "error",
    "debugLogfilePrefix": null,
    "debugLogfileRetentionCount": -1,
    "debugLogfileRotationMinutes": -1,
    "debugLogfileRotationSize": 52428800,
    "debugLogfileSuffix": "-yyyy.MM.dd-HH.mm.ss",
    "filterMode": {
      "": "ALL",
    },
    "fqdnCheck": false,
    "fqdnDefault": "testurl.com",
    "fqdnMapping": {},
    "httpSessionBinding": true,
    "jwtName": "am-auth-jwt",
    "lbCookieEnabled": false,
    "lbCookieName": "amlbcookie",
    "localAuditLogRotation": false,
    "localAuditLogfileRetentionCount": -1,
    "localAuditRotationSize": 52428800,
    "loginAttemptLimit": 0,
    "loginAttemptLimitCookieName": "amFilterParam",
    "preAuthCookieMaxAge": 300,
    "preAuthCookieName": "amFilterCDSSORequest",
    "recheckAmUnavailabilityInSeconds": 5,
    "redirectAttemptLimit": 0,
    "redirectAttemptLimitCookieName": "amFilterRDParam",
    "repositoryLocation": "centralized",
    "secretLabelIdentifier": null,
    "status": "Inactive",
    "userAttributeName": "employeenumber",
    "userMappingMode": "USER_ID",
    "userPrincipalFlag": false,
    "userTokenName": "UserToken",
    "webSocketConnectionIntervalInMinutes": 30,
  },
  "miscJ2EEAgentConfig": {
    "agent302RedirectContentType": "application/json",
    "agent302RedirectEnabled": true,
    "agent302RedirectHttpData": "{redirect:{requestUri:%REQUEST_URI%,requestUrl:%REQUEST_URL%,targetUrl:%TARGET%}}",
    "agent302RedirectInvertEnabled": false,
    "agent302RedirectNerList": [
      "",
    ],
    "agent302RedirectStatusCode": 200,
    "authFailReasonParameterName": null,
    "authFailReasonParameterRemapper": {},
    "authFailReasonUrl": null,
    "gotoParameterName": "goto",
    "gotoUrl": null,
    "ignorePathInfo": false,
    "legacyRedirectUri": "/agent/sunwLegacySupportURI",
    "legacyUserAgentList": [
      "Mozilla/4.7*",
    ],
    "legacyUserAgentSupport": false,
    "localeCountry": "US",
    "localeLanguage": "en",
    "loginReasonMap": {},
    "loginReasonParameterName": null,
    "portCheckEnabled": false,
    "portCheckFile": "PortCheckContent.txt",
    "portCheckSetting": {
      "8080": "http",
    },
    "unwantedHttpUrlParams": [
      "",
    ],
    "unwantedHttpUrlRegexParams": [
      "",
    ],
    "wantedHttpUrlParams": [
      "",
    ],
    "wantedHttpUrlRegexParams": [
      "",
    ],
  },
  "ssoJ2EEAgentConfig": {
    "acceptIPDPCookie": false,
    "acceptSsoTokenDomainList": [
      "",
    ],
    "acceptSsoTokenEnabled": false,
    "authExchangeCookieName": null,
    "authExchangeUri": null,
    "cdssoDomainList": [
      "",
    ],
    "cdssoRedirectUri": "/agent/post-authn-redirect",
    "cdssoSecureCookies": false,
    "cookieResetDomains": {},
    "cookieResetEnabled": false,
    "cookieResetNames": [
      "",
    ],
    "cookieResetPaths": {},
    "encodeCookies": false,
    "excludedUserAgentsList": [],
    "httpOnly": true,
    "setCookieAttributeMap": {},
    "setCookieInternalMap": {},
  },
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents --directory configManagerExportOauth2AgentsDir5 -f test/e2e/fr-config-manager-pull-config/oauth2-agents.json": should export all the agents defined in the config file.: configManagerExportOauth2AgentsDir5/realms/alpha/realm-config/agents/RemoteConsentAgent/test.json 1`] = `
{
  "_id": "test",
  "_rev": "-1262869401",
  "_type": {
    "_id": "RemoteConsentAgent",
    "collection": true,
    "name": "OAuth2 Remote Consent Service",
  },
  "agentgroup": null,
  "jwkSet": null,
  "jwkStoreCacheMissCacheTime": 60000,
  "jwksCacheTimeout": 3600000,
  "jwksUri": null,
  "metadataUrl": null,
  "publicKeyLocation": "jwks_uri",
  "pushedConsentAuthenticationMethod": "None",
  "pushedConsentRequestUrl": null,
  "remoteConsentRedirectUrl": null,
  "remoteConsentRequestEncryptionAlgorithm": "RSA-OAEP-256",
  "remoteConsentRequestEncryptionEnabled": true,
  "remoteConsentRequestEncryptionMethod": "A128GCM",
  "remoteConsentRequestSigningAlgorithm": "RS256",
  "remoteConsentResponseEncryptionAlgorithm": "RSA-OAEP-256",
  "remoteConsentResponseEncryptionMethod": "A128GCM",
  "remoteConsentResponseSigningAlg": "RS256",
  "requestTimeLimit": 180,
  "resourceOwnerSessionProperties": {},
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents --directory configManagerExportOauth2AgentsDir5 -f test/e2e/fr-config-manager-pull-config/oauth2-agents.json": should export all the agents defined in the config file.: configManagerExportOauth2AgentsDir5/realms/alpha/realm-config/agents/SoftwarePublisher/test software publisher.json 1`] = `
{
  "_id": "test software publisher",
  "_rev": "1510799304",
  "_type": {
    "_id": "SoftwarePublisher",
    "collection": true,
    "name": "OAuth2 Software Publisher",
  },
  "agentgroup": null,
  "issuer": null,
  "jwkSet": null,
  "jwkStoreCacheMissCacheTime": 60000,
  "jwksCacheTimeout": 3600000,
  "jwksUri": null,
  "publicKeyLocation": "jwks_uri",
  "softwareStatementSigningAlgorithm": "RS256",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents --directory configManagerExportOauth2AgentsDir5 -f test/e2e/fr-config-manager-pull-config/oauth2-agents.json": should export all the agents defined in the config file.: configManagerExportOauth2AgentsDir5/realms/alpha/realm-config/agents/WebAgent/frodo-test-web-agent.json 1`] = `
{
  "_id": "frodo-test-web-agent",
  "_rev": "218393939",
  "_type": {
    "_id": "WebAgent",
    "collection": true,
    "name": "Web Agents",
  },
  "advancedWebAgentConfig": {
    "apacheAuthDirectives": null,
    "clientHostnameHeader": null,
    "clientIpHeader": null,
    "customProperties": [],
    "fragmentRedirectEnabled": false,
    "hostnameToIpAddress": [],
    "logonAndImpersonation": false,
    "overrideRequestHost": false,
    "overrideRequestPort": false,
    "overrideRequestProtocol": false,
    "pdpJavascriptRepost": false,
    "pdpSkipPostUrl": [
      "",
    ],
    "pdpStickySessionCookieName": null,
    "pdpStickySessionMode": "OFF",
    "pdpStickySessionValue": null,
    "postDataCachePeriod": 10,
    "postDataPreservation": false,
    "replayPasswordKey": null,
    "retainSessionCache": false,
    "showPasswordInHeader": false,
  },
  "amServicesWebAgent": {
    "amLoginUrl": [],
    "amLogoutUrl": [
      "http://testserverurl.com:8080/UI/Logout",
    ],
    "applicationLogoutUrls": [
      "",
    ],
    "conditionalLoginUrl": [
      "",
    ],
    "customLoginMode": 0,
    "enableLogoutRegex": false,
    "fetchPoliciesFromRootResource": false,
    "invalidateLogoutSession": true,
    "logoutRedirectDisabled": false,
    "logoutRedirectUrl": null,
    "logoutResetCookies": [
      "",
    ],
    "logoutUrlRegex": null,
    "policyCachePollingInterval": 3,
    "policyClockSkew": 0,
    "policyEvaluationApplication": "iPlanetAMWebAgentService",
    "policyEvaluationRealm": "/",
    "publicAmUrl": null,
    "regexConditionalLoginPattern": [
      "",
    ],
    "regexConditionalLoginUrl": [
      "",
    ],
    "retrieveClientHostname": false,
    "ssoCachePollingInterval": 3,
    "userIdParameter": "UserToken",
    "userIdParameterType": "session",
  },
  "applicationWebAgentConfig": {
    "attributeMultiValueSeparator": "|",
    "clientIpValidation": false,
    "continuousSecurityCookies": {},
    "continuousSecurityHeaders": {},
    "fetchAttributesForNotEnforcedUrls": false,
    "ignorePathInfoForNotEnforcedUrls": true,
    "invertNotEnforcedUrls": false,
    "notEnforcedIps": [
      "",
    ],
    "notEnforcedIpsList": [
      "",
    ],
    "notEnforcedIpsRegex": false,
    "notEnforcedUrls": [
      "",
    ],
    "notEnforcedUrlsRegex": false,
    "profileAttributeFetchMode": "NONE",
    "profileAttributeMap": {},
    "responseAttributeFetchMode": "NONE",
    "responseAttributeMap": {},
    "sessionAttributeFetchMode": "NONE",
    "sessionAttributeMap": {},
  },
  "globalWebAgentConfig": {
    "accessDeniedUrl": null,
    "agentConfigChangeNotificationsEnabled": true,
    "agentDebugLevel": "Error",
    "agentUriPrefix": "http://testagenturl.com:8080/amagent",
    "agentgroup": null,
    "amLbCookieEnable": false,
    "auditAccessType": "LOG_NONE",
    "auditLogLocation": "REMOTE",
    "cdssoRootUrl": [
      "agentRootURL=http://testagenturl.com:8080/",
    ],
    "configurationPollingInterval": 60,
    "disableJwtAudit": false,
    "fqdnCheck": false,
    "fqdnDefault": "testagenturl.com",
    "fqdnMapping": {},
    "jwtAuditWhitelist": null,
    "jwtName": "am-auth-jwt",
    "notificationsEnabled": true,
    "repositoryLocation": "centralized",
    "resetIdleTime": false,
    "secretLabelIdentifier": null,
    "ssoOnlyMode": false,
    "status": "Inactive",
    "webSocketConnectionIntervalInMinutes": 30,
  },
  "miscWebAgentConfig": {
    "addCacheControlHeader": false,
    "anonymousUserEnabled": false,
    "anonymousUserId": "anonymous",
    "caseInsensitiveUrlComparison": true,
    "compositeAdviceEncode": false,
    "compositeAdviceRedirect": false,
    "encodeSpecialCharsInCookies": false,
    "encodeUrlSpecialCharacters": false,
    "gotoParameterName": "goto",
    "headerJsonResponse": {},
    "ignorePathInfo": false,
    "invalidUrlRegex": null,
    "invertUrlJsonResponse": false,
    "mineEncodeHeader": 0,
    "profileAttributesCookieMaxAge": 300,
    "profileAttributesCookiePrefix": "HTTP_",
    "statusCodeJsonResponse": 202,
    "urlJsonResponse": [
      "",
    ],
  },
  "ssoWebAgentConfig": {
    "acceptSsoToken": false,
    "cdssoCookieDomain": [
      "",
    ],
    "cdssoRedirectUri": "agent/cdsso-oauth2",
    "cookieName": "iPlanetDirectoryPro",
    "cookieResetEnabled": false,
    "cookieResetList": [
      "",
    ],
    "cookieResetOnRedirect": false,
    "httpOnly": true,
    "multivaluePreAuthnCookie": false,
    "persistentJwtCookie": false,
    "sameSite": null,
    "secureCookies": false,
  },
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents --directory configManagerExportOauth2AgentsDir5 -f test/e2e/fr-config-manager-pull-config/oauth2-agents.json": should export all the agents defined in the config file.: configManagerExportOauth2AgentsDir5/realms/alpha/realm-config/agents/WebAgent/frodo-test-web-agent2.json 1`] = `
{
  "_id": "frodo-test-web-agent2",
  "_rev": "930101313",
  "_type": {
    "_id": "WebAgent",
    "collection": true,
    "name": "Web Agents",
  },
  "advancedWebAgentConfig": {
    "apacheAuthDirectives": null,
    "clientHostnameHeader": null,
    "clientIpHeader": null,
    "customProperties": [],
    "fragmentRedirectEnabled": false,
    "hostnameToIpAddress": [],
    "logonAndImpersonation": false,
    "overrideRequestHost": false,
    "overrideRequestPort": false,
    "overrideRequestProtocol": false,
    "pdpJavascriptRepost": false,
    "pdpSkipPostUrl": [
      "",
    ],
    "pdpStickySessionCookieName": null,
    "pdpStickySessionMode": "OFF",
    "pdpStickySessionValue": null,
    "postDataCachePeriod": 10,
    "postDataPreservation": false,
    "replayPasswordKey": null,
    "retainSessionCache": false,
    "showPasswordInHeader": false,
  },
  "amServicesWebAgent": {
    "amLoginUrl": [],
    "amLogoutUrl": [
      "http://testserverurl.com:8080/UI/Logout",
    ],
    "applicationLogoutUrls": [
      "",
    ],
    "conditionalLoginUrl": [
      "",
    ],
    "customLoginMode": 0,
    "enableLogoutRegex": false,
    "fetchPoliciesFromRootResource": false,
    "invalidateLogoutSession": true,
    "logoutRedirectDisabled": false,
    "logoutRedirectUrl": null,
    "logoutResetCookies": [
      "",
    ],
    "logoutUrlRegex": null,
    "policyCachePollingInterval": 3,
    "policyClockSkew": 0,
    "policyEvaluationApplication": "iPlanetAMWebAgentService",
    "policyEvaluationRealm": "/",
    "publicAmUrl": null,
    "regexConditionalLoginPattern": [
      "",
    ],
    "regexConditionalLoginUrl": [
      "",
    ],
    "retrieveClientHostname": false,
    "ssoCachePollingInterval": 3,
    "userIdParameter": "UserToken",
    "userIdParameterType": "session",
  },
  "applicationWebAgentConfig": {
    "attributeMultiValueSeparator": "|",
    "clientIpValidation": false,
    "continuousSecurityCookies": {},
    "continuousSecurityHeaders": {},
    "fetchAttributesForNotEnforcedUrls": false,
    "ignorePathInfoForNotEnforcedUrls": true,
    "invertNotEnforcedUrls": false,
    "notEnforcedIps": [
      "",
    ],
    "notEnforcedIpsList": [
      "",
    ],
    "notEnforcedIpsRegex": false,
    "notEnforcedUrls": [
      "",
    ],
    "notEnforcedUrlsRegex": false,
    "profileAttributeFetchMode": "NONE",
    "profileAttributeMap": {},
    "responseAttributeFetchMode": "NONE",
    "responseAttributeMap": {},
    "sessionAttributeFetchMode": "NONE",
    "sessionAttributeMap": {},
  },
  "globalWebAgentConfig": {
    "accessDeniedUrl": null,
    "agentConfigChangeNotificationsEnabled": true,
    "agentDebugLevel": "Error",
    "agentUriPrefix": "http://testagenturl.com:8080/amagent",
    "agentgroup": null,
    "amLbCookieEnable": false,
    "auditAccessType": "LOG_NONE",
    "auditLogLocation": "REMOTE",
    "cdssoRootUrl": [
      "agentRootURL=http://testagenturl.com:8080/",
    ],
    "configurationPollingInterval": 60,
    "disableJwtAudit": false,
    "fqdnCheck": false,
    "fqdnDefault": "testagenturl.com",
    "fqdnMapping": {},
    "jwtAuditWhitelist": null,
    "jwtName": "am-auth-jwt",
    "notificationsEnabled": true,
    "repositoryLocation": "centralized",
    "resetIdleTime": false,
    "secretLabelIdentifier": null,
    "ssoOnlyMode": false,
    "status": "Inactive",
    "webSocketConnectionIntervalInMinutes": 30,
  },
  "miscWebAgentConfig": {
    "addCacheControlHeader": false,
    "anonymousUserEnabled": false,
    "anonymousUserId": "anonymous",
    "caseInsensitiveUrlComparison": true,
    "compositeAdviceEncode": false,
    "compositeAdviceRedirect": false,
    "encodeSpecialCharsInCookies": false,
    "encodeUrlSpecialCharacters": false,
    "gotoParameterName": "goto",
    "headerJsonResponse": {},
    "ignorePathInfo": false,
    "invalidUrlRegex": null,
    "invertUrlJsonResponse": false,
    "mineEncodeHeader": 0,
    "profileAttributesCookieMaxAge": 300,
    "profileAttributesCookiePrefix": "HTTP_",
    "statusCodeJsonResponse": 202,
    "urlJsonResponse": [
      "",
    ],
  },
  "ssoWebAgentConfig": {
    "acceptSsoToken": false,
    "cdssoCookieDomain": [
      "",
    ],
    "cdssoRedirectUri": "agent/cdsso-oauth2",
    "cookieName": "iPlanetDirectoryPro",
    "cookieResetEnabled": false,
    "cookieResetList": [
      "",
    ],
    "cookieResetOnRedirect": false,
    "httpOnly": true,
    "multivaluePreAuthnCookie": false,
    "persistentJwtCookie": false,
    "sameSite": null,
    "secureCookies": false,
  },
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir0": should export all agents from all realms in fr-config manager style. 1`] = `0`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir0": should export all agents from all realms in fr-config manager style. 2`] = `""`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir0": should export all agents from all realms in fr-config manager style.: configManagerExportOauth2AgentsDir0/realms/alpha/realm-config/agents/2.2_Agent/my-policy-agent.json 1`] = `
{
  "_id": "my-policy-agent",
  "_rev": "-504717871",
  "_type": {
    "_id": "2.2_Agent",
    "collection": true,
    "name": "Policy Agents",
  },
  "cdssoRootUrl": [],
  "description": null,
  "status": "Active",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir0": should export all agents from all realms in fr-config manager style.: configManagerExportOauth2AgentsDir0/realms/alpha/realm-config/agents/IdentityGatewayAgent/cdsso-ig-agent.json 1`] = `
{
  "_id": "cdsso-ig-agent",
  "_rev": "-1524382492",
  "_type": {
    "_id": "IdentityGatewayAgent",
    "collection": true,
    "name": "Identity Gateway Agents",
  },
  "agentgroup": null,
  "igCdssoLoginUrlTemplate": null,
  "igCdssoRedirectUrls": [
    "https://volker-demo.encore.forgerock.com:443/apps/hrlite/redirect",
    "https://volker-demo.encore.forgerock.com/apps/hrlite/redirect",
    "https://volker-demo.encore.forgerock.com:443/apps/hrlite-rest/redirect",
    "https://volker-demo.encore.forgerock.com:443/apps/contractor/redirect",
    "https://volker-demo.encore.forgerock.com/apps/hrlite-rest/redirect",
    "https://volker-demo.encore.forgerock.com/apps/contractor/redirect",
  ],
  "igTokenIntrospection": "Realm_Subs",
  "secretLabelIdentifier": null,
  "status": "Active",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir0": should export all agents from all realms in fr-config manager style.: configManagerExportOauth2AgentsDir0/realms/alpha/realm-config/agents/IdentityGatewayAgent/frodo-test-ig-agent.json 1`] = `
{
  "_id": "frodo-test-ig-agent",
  "_rev": "-1490423122",
  "_type": {
    "_id": "IdentityGatewayAgent",
    "collection": true,
    "name": "Identity Gateway Agents",
  },
  "agentgroup": "test_ig_group",
  "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
  "igCdssoRedirectUrls": [
    "http://testurl.com:8080/frodo",
  ],
  "igTokenIntrospection": "Realm",
  "secretLabelIdentifier": null,
  "status": "Inactive",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir0": should export all agents from all realms in fr-config manager style.: configManagerExportOauth2AgentsDir0/realms/alpha/realm-config/agents/IdentityGatewayAgent/frodo-test-ig-agent2.json 1`] = `
{
  "_id": "frodo-test-ig-agent2",
  "_rev": "1365023305",
  "_type": {
    "_id": "IdentityGatewayAgent",
    "collection": true,
    "name": "Identity Gateway Agents",
  },
  "agentgroup": null,
  "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
  "igCdssoRedirectUrls": [
    "http://testurl.com:8080/frodo",
  ],
  "igTokenIntrospection": "Realm",
  "secretLabelIdentifier": null,
  "status": "Inactive",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir0": should export all agents from all realms in fr-config manager style.: configManagerExportOauth2AgentsDir0/realms/alpha/realm-config/agents/IdentityGatewayAgent/ig-agent.json 1`] = `
{
  "_id": "ig-agent",
  "_rev": "-1566320906",
  "_type": {
    "_id": "IdentityGatewayAgent",
    "collection": true,
    "name": "Identity Gateway Agents",
  },
  "agentgroup": null,
  "igCdssoLoginUrlTemplate": null,
  "igCdssoRedirectUrls": [],
  "igTokenIntrospection": "Realm_Subs",
  "secretLabelIdentifier": null,
  "status": "Active",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir0": should export all agents from all realms in fr-config manager style.: configManagerExportOauth2AgentsDir0/realms/alpha/realm-config/agents/J2EEAgent/frodo-test-java-agent.json 1`] = `
{
  "_id": "frodo-test-java-agent",
  "_rev": "1131793354",
  "_type": {
    "_id": "J2EEAgent",
    "collection": true,
    "name": "J2EE Agents",
  },
  "advancedJ2EEAgentConfig": {
    "alternativeAgentHostname": null,
    "alternativeAgentPort": null,
    "alternativeAgentProtocol": null,
    "clientHostnameHeader": null,
    "clientIpHeader": null,
    "customProperties": [],
    "expiredSessionCacheSize": 500,
    "expiredSessionCacheTTL": 20,
    "fragmentRelayUri": null,
    "idleTimeRefreshWindow": 1,
    "jwtCacheSize": 5000,
    "jwtCacheTTL": 30,
    "missingPostDataPreservationEntryUri": [
      "",
    ],
    "monitoringToCSV": false,
    "policyCachePerUser": 50,
    "policyCacheSize": 5000,
    "policyClientPollingInterval": 3,
    "possibleXssCodeElements": [
      "",
    ],
    "postDataCacheTtlMin": 5,
    "postDataPreservation": false,
    "postDataPreserveCacheEntryMaxEntries": 1000,
    "postDataPreserveCacheEntryMaxTotalSizeMb": -1,
    "postDataPreserveMultipartLimitBytes": 104857600,
    "postDataPreserveMultipartParameterLimitBytes": 104857600,
    "postDataStickySessionKeyValue": null,
    "postDataStickySessionMode": "URL",
    "retainPreviousOverrideBehavior": true,
    "sessionCacheTTL": 15,
    "ssoExchangeCacheSize": 100,
    "ssoExchangeCacheTTL": 5,
    "xssDetectionRedirectUri": {},
  },
  "amServicesJ2EEAgent": {
    "agentAdviceEncode": false,
    "amLoginUrl": [],
    "authServiceHost": "testurl.com",
    "authServicePort": 8080,
    "authServiceProtocol": "http",
    "authSuccessRedirectUrl": false,
    "conditionalLoginUrl": [
      "",
    ],
    "conditionalLogoutUrl": [
      "",
    ],
    "customLoginEnabled": false,
    "legacyLoginUrlList": [
      "",
    ],
    "overridePolicyEvaluationRealmEnabled": false,
    "policyEvaluationApplication": "iPlanetAMWebAgentService",
    "policyEvaluationRealm": "/",
    "policyNotifications": true,
    "restrictToRealm": {},
    "strategyWhenAMUnavailable": "EVAL_NER_USE_CACHE_UNTIL_EXPIRED_ELSE_503",
    "urlPolicyEnvGetParameters": [
      "",
    ],
    "urlPolicyEnvJsessionParameters": [
      "",
    ],
    "urlPolicyEnvPostParameters": [
      "",
    ],
  },
  "applicationJ2EEAgentConfig": {
    "applicationLogoutUris": {},
    "clientIpValidationMode": {
      "": "OFF",
    },
    "clientIpValidationRange": {},
    "continuousSecurityCookies": {},
    "continuousSecurityHeaders": {},
    "cookieAttributeMultiValueSeparator": "|",
    "cookieAttributeUrlEncoded": true,
    "headerAttributeDateFormat": "EEE, d MMM yyyy hh:mm:ss z",
    "invertNotEnforcedIps": false,
    "invertNotEnforcedUris": false,
    "logoutEntryUri": {},
    "logoutIntrospection": false,
    "logoutRequestParameters": {},
    "notEnforcedFavicon": true,
    "notEnforcedIps": [
      "",
    ],
    "notEnforcedIpsCacheEnabled": true,
    "notEnforcedIpsCacheSize": 1000,
    "notEnforcedRuleCompoundSeparator": "|",
    "notEnforcedUris": [
      "",
    ],
    "notEnforcedUrisCacheEnabled": true,
    "notEnforcedUrisCacheSize": 1000,
    "profileAttributeFetchMode": "NONE",
    "profileAttributeMap": {},
    "resourceAccessDeniedUri": {},
    "responseAttributeFetchMode": "NONE",
    "responseAttributeMap": {},
    "sessionAttributeFetchMode": "NONE",
    "sessionAttributeMap": {},
  },
  "globalJ2EEAgentConfig": {
    "agentConfigChangeNotificationsEnabled": true,
    "agentgroup": null,
    "auditAccessType": "LOG_NONE",
    "auditLogLocation": "REMOTE",
    "cdssoRootUrl": [
      "agentRootURL=http://testurl.com:8080/",
    ],
    "configurationReloadInterval": 0,
    "customResponseHeader": {},
    "debugLevel": "error",
    "debugLogfilePrefix": null,
    "debugLogfileRetentionCount": -1,
    "debugLogfileRotationMinutes": -1,
    "debugLogfileRotationSize": 52428800,
    "debugLogfileSuffix": "-yyyy.MM.dd-HH.mm.ss",
    "filterMode": {
      "": "ALL",
    },
    "fqdnCheck": false,
    "fqdnDefault": "testurl.com",
    "fqdnMapping": {},
    "httpSessionBinding": true,
    "jwtName": "am-auth-jwt",
    "lbCookieEnabled": false,
    "lbCookieName": "amlbcookie",
    "localAuditLogRotation": false,
    "localAuditLogfileRetentionCount": -1,
    "localAuditRotationSize": 52428800,
    "loginAttemptLimit": 0,
    "loginAttemptLimitCookieName": "amFilterParam",
    "preAuthCookieMaxAge": 300,
    "preAuthCookieName": "amFilterCDSSORequest",
    "recheckAmUnavailabilityInSeconds": 5,
    "redirectAttemptLimit": 0,
    "redirectAttemptLimitCookieName": "amFilterRDParam",
    "repositoryLocation": "centralized",
    "secretLabelIdentifier": null,
    "status": "Inactive",
    "userAttributeName": "employeenumber",
    "userMappingMode": "USER_ID",
    "userPrincipalFlag": false,
    "userTokenName": "UserToken",
    "webSocketConnectionIntervalInMinutes": 30,
  },
  "miscJ2EEAgentConfig": {
    "agent302RedirectContentType": "application/json",
    "agent302RedirectEnabled": true,
    "agent302RedirectHttpData": "{redirect:{requestUri:%REQUEST_URI%,requestUrl:%REQUEST_URL%,targetUrl:%TARGET%}}",
    "agent302RedirectInvertEnabled": false,
    "agent302RedirectNerList": [
      "",
    ],
    "agent302RedirectStatusCode": 200,
    "authFailReasonParameterName": null,
    "authFailReasonParameterRemapper": {},
    "authFailReasonUrl": null,
    "gotoParameterName": "goto",
    "gotoUrl": null,
    "ignorePathInfo": false,
    "legacyRedirectUri": "/agent/sunwLegacySupportURI",
    "legacyUserAgentList": [
      "Mozilla/4.7*",
    ],
    "legacyUserAgentSupport": false,
    "localeCountry": "US",
    "localeLanguage": "en",
    "loginReasonMap": {},
    "loginReasonParameterName": null,
    "portCheckEnabled": false,
    "portCheckFile": "PortCheckContent.txt",
    "portCheckSetting": {
      "8080": "http",
    },
    "unwantedHttpUrlParams": [
      "",
    ],
    "unwantedHttpUrlRegexParams": [
      "",
    ],
    "wantedHttpUrlParams": [
      "",
    ],
    "wantedHttpUrlRegexParams": [
      "",
    ],
  },
  "ssoJ2EEAgentConfig": {
    "acceptIPDPCookie": false,
    "acceptSsoTokenDomainList": [
      "",
    ],
    "acceptSsoTokenEnabled": false,
    "authExchangeCookieName": null,
    "authExchangeUri": null,
    "cdssoDomainList": [
      "",
    ],
    "cdssoRedirectUri": "/agent/post-authn-redirect",
    "cdssoSecureCookies": false,
    "cookieResetDomains": {},
    "cookieResetEnabled": false,
    "cookieResetNames": [
      "",
    ],
    "cookieResetPaths": {},
    "encodeCookies": false,
    "excludedUserAgentsList": [],
    "httpOnly": true,
    "setCookieAttributeMap": {},
    "setCookieInternalMap": {},
  },
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir0": should export all agents from all realms in fr-config manager style.: configManagerExportOauth2AgentsDir0/realms/alpha/realm-config/agents/J2EEAgent/frodo-test-java-agent2.json 1`] = `
{
  "_id": "frodo-test-java-agent2",
  "_rev": "561894916",
  "_type": {
    "_id": "J2EEAgent",
    "collection": true,
    "name": "J2EE Agents",
  },
  "advancedJ2EEAgentConfig": {
    "alternativeAgentHostname": null,
    "alternativeAgentPort": null,
    "alternativeAgentProtocol": null,
    "clientHostnameHeader": null,
    "clientIpHeader": null,
    "customProperties": [],
    "expiredSessionCacheSize": 500,
    "expiredSessionCacheTTL": 20,
    "fragmentRelayUri": null,
    "idleTimeRefreshWindow": 1,
    "jwtCacheSize": 5000,
    "jwtCacheTTL": 30,
    "missingPostDataPreservationEntryUri": [
      "",
    ],
    "monitoringToCSV": false,
    "policyCachePerUser": 50,
    "policyCacheSize": 5000,
    "policyClientPollingInterval": 3,
    "possibleXssCodeElements": [
      "",
    ],
    "postDataCacheTtlMin": 5,
    "postDataPreservation": false,
    "postDataPreserveCacheEntryMaxEntries": 1000,
    "postDataPreserveCacheEntryMaxTotalSizeMb": -1,
    "postDataPreserveMultipartLimitBytes": 104857600,
    "postDataPreserveMultipartParameterLimitBytes": 104857600,
    "postDataStickySessionKeyValue": null,
    "postDataStickySessionMode": "URL",
    "retainPreviousOverrideBehavior": true,
    "sessionCacheTTL": 15,
    "ssoExchangeCacheSize": 100,
    "ssoExchangeCacheTTL": 5,
    "xssDetectionRedirectUri": {},
  },
  "amServicesJ2EEAgent": {
    "agentAdviceEncode": false,
    "amLoginUrl": [],
    "authServiceHost": "testurl.com",
    "authServicePort": 8080,
    "authServiceProtocol": "http",
    "authSuccessRedirectUrl": false,
    "conditionalLoginUrl": [
      "",
    ],
    "conditionalLogoutUrl": [
      "",
    ],
    "customLoginEnabled": false,
    "legacyLoginUrlList": [
      "",
    ],
    "overridePolicyEvaluationRealmEnabled": false,
    "policyEvaluationApplication": "iPlanetAMWebAgentService",
    "policyEvaluationRealm": "/",
    "policyNotifications": true,
    "restrictToRealm": {},
    "strategyWhenAMUnavailable": "EVAL_NER_USE_CACHE_UNTIL_EXPIRED_ELSE_503",
    "urlPolicyEnvGetParameters": [
      "",
    ],
    "urlPolicyEnvJsessionParameters": [
      "",
    ],
    "urlPolicyEnvPostParameters": [
      "",
    ],
  },
  "applicationJ2EEAgentConfig": {
    "applicationLogoutUris": {},
    "clientIpValidationMode": {
      "": "OFF",
    },
    "clientIpValidationRange": {},
    "continuousSecurityCookies": {},
    "continuousSecurityHeaders": {},
    "cookieAttributeMultiValueSeparator": "|",
    "cookieAttributeUrlEncoded": true,
    "headerAttributeDateFormat": "EEE, d MMM yyyy hh:mm:ss z",
    "invertNotEnforcedIps": false,
    "invertNotEnforcedUris": false,
    "logoutEntryUri": {},
    "logoutIntrospection": false,
    "logoutRequestParameters": {},
    "notEnforcedFavicon": true,
    "notEnforcedIps": [
      "",
    ],
    "notEnforcedIpsCacheEnabled": true,
    "notEnforcedIpsCacheSize": 1000,
    "notEnforcedRuleCompoundSeparator": "|",
    "notEnforcedUris": [
      "",
    ],
    "notEnforcedUrisCacheEnabled": true,
    "notEnforcedUrisCacheSize": 1000,
    "profileAttributeFetchMode": "NONE",
    "profileAttributeMap": {},
    "resourceAccessDeniedUri": {},
    "responseAttributeFetchMode": "NONE",
    "responseAttributeMap": {},
    "sessionAttributeFetchMode": "NONE",
    "sessionAttributeMap": {},
  },
  "globalJ2EEAgentConfig": {
    "agentConfigChangeNotificationsEnabled": true,
    "agentgroup": null,
    "auditAccessType": "LOG_NONE",
    "auditLogLocation": "REMOTE",
    "cdssoRootUrl": [
      "agentRootURL=http://testurl.com:8080/",
    ],
    "configurationReloadInterval": 0,
    "customResponseHeader": {},
    "debugLevel": "error",
    "debugLogfilePrefix": null,
    "debugLogfileRetentionCount": -1,
    "debugLogfileRotationMinutes": -1,
    "debugLogfileRotationSize": 52428800,
    "debugLogfileSuffix": "-yyyy.MM.dd-HH.mm.ss",
    "filterMode": {
      "": "ALL",
    },
    "fqdnCheck": false,
    "fqdnDefault": "testurl.com",
    "fqdnMapping": {},
    "httpSessionBinding": true,
    "jwtName": "am-auth-jwt",
    "lbCookieEnabled": false,
    "lbCookieName": "amlbcookie",
    "localAuditLogRotation": false,
    "localAuditLogfileRetentionCount": -1,
    "localAuditRotationSize": 52428800,
    "loginAttemptLimit": 0,
    "loginAttemptLimitCookieName": "amFilterParam",
    "preAuthCookieMaxAge": 300,
    "preAuthCookieName": "amFilterCDSSORequest",
    "recheckAmUnavailabilityInSeconds": 5,
    "redirectAttemptLimit": 0,
    "redirectAttemptLimitCookieName": "amFilterRDParam",
    "repositoryLocation": "centralized",
    "secretLabelIdentifier": null,
    "status": "Inactive",
    "userAttributeName": "employeenumber",
    "userMappingMode": "USER_ID",
    "userPrincipalFlag": false,
    "userTokenName": "UserToken",
    "webSocketConnectionIntervalInMinutes": 30,
  },
  "miscJ2EEAgentConfig": {
    "agent302RedirectContentType": "application/json",
    "agent302RedirectEnabled": true,
    "agent302RedirectHttpData": "{redirect:{requestUri:%REQUEST_URI%,requestUrl:%REQUEST_URL%,targetUrl:%TARGET%}}",
    "agent302RedirectInvertEnabled": false,
    "agent302RedirectNerList": [
      "",
    ],
    "agent302RedirectStatusCode": 200,
    "authFailReasonParameterName": null,
    "authFailReasonParameterRemapper": {},
    "authFailReasonUrl": null,
    "gotoParameterName": "goto",
    "gotoUrl": null,
    "ignorePathInfo": false,
    "legacyRedirectUri": "/agent/sunwLegacySupportURI",
    "legacyUserAgentList": [
      "Mozilla/4.7*",
    ],
    "legacyUserAgentSupport": false,
    "localeCountry": "US",
    "localeLanguage": "en",
    "loginReasonMap": {},
    "loginReasonParameterName": null,
    "portCheckEnabled": false,
    "portCheckFile": "PortCheckContent.txt",
    "portCheckSetting": {
      "8080": "http",
    },
    "unwantedHttpUrlParams": [
      "",
    ],
    "unwantedHttpUrlRegexParams": [
      "",
    ],
    "wantedHttpUrlParams": [
      "",
    ],
    "wantedHttpUrlRegexParams": [
      "",
    ],
  },
  "ssoJ2EEAgentConfig": {
    "acceptIPDPCookie": false,
    "acceptSsoTokenDomainList": [
      "",
    ],
    "acceptSsoTokenEnabled": false,
    "authExchangeCookieName": null,
    "authExchangeUri": null,
    "cdssoDomainList": [
      "",
    ],
    "cdssoRedirectUri": "/agent/post-authn-redirect",
    "cdssoSecureCookies": false,
    "cookieResetDomains": {},
    "cookieResetEnabled": false,
    "cookieResetNames": [
      "",
    ],
    "cookieResetPaths": {},
    "encodeCookies": false,
    "excludedUserAgentsList": [],
    "httpOnly": true,
    "setCookieAttributeMap": {},
    "setCookieInternalMap": {},
  },
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir0": should export all agents from all realms in fr-config manager style.: configManagerExportOauth2AgentsDir0/realms/alpha/realm-config/agents/RemoteConsentAgent/test.json 1`] = `
{
  "_id": "test",
  "_rev": "-1262869401",
  "_type": {
    "_id": "RemoteConsentAgent",
    "collection": true,
    "name": "OAuth2 Remote Consent Service",
  },
  "agentgroup": null,
  "jwkSet": null,
  "jwkStoreCacheMissCacheTime": 60000,
  "jwksCacheTimeout": 3600000,
  "jwksUri": null,
  "metadataUrl": null,
  "publicKeyLocation": "jwks_uri",
  "pushedConsentAuthenticationMethod": "None",
  "pushedConsentRequestUrl": null,
  "remoteConsentRedirectUrl": null,
  "remoteConsentRequestEncryptionAlgorithm": "RSA-OAEP-256",
  "remoteConsentRequestEncryptionEnabled": true,
  "remoteConsentRequestEncryptionMethod": "A128GCM",
  "remoteConsentRequestSigningAlgorithm": "RS256",
  "remoteConsentResponseEncryptionAlgorithm": "RSA-OAEP-256",
  "remoteConsentResponseEncryptionMethod": "A128GCM",
  "remoteConsentResponseSigningAlg": "RS256",
  "requestTimeLimit": 180,
  "resourceOwnerSessionProperties": {},
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir0": should export all agents from all realms in fr-config manager style.: configManagerExportOauth2AgentsDir0/realms/alpha/realm-config/agents/SoftwarePublisher/test software publisher.json 1`] = `
{
  "_id": "test software publisher",
  "_rev": "1510799304",
  "_type": {
    "_id": "SoftwarePublisher",
    "collection": true,
    "name": "OAuth2 Software Publisher",
  },
  "agentgroup": null,
  "issuer": null,
  "jwkSet": null,
  "jwkStoreCacheMissCacheTime": 60000,
  "jwksCacheTimeout": 3600000,
  "jwksUri": null,
  "publicKeyLocation": "jwks_uri",
  "softwareStatementSigningAlgorithm": "RS256",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir0": should export all agents from all realms in fr-config manager style.: configManagerExportOauth2AgentsDir0/realms/alpha/realm-config/agents/WebAgent/frodo-test-web-agent.json 1`] = `
{
  "_id": "frodo-test-web-agent",
  "_rev": "218393939",
  "_type": {
    "_id": "WebAgent",
    "collection": true,
    "name": "Web Agents",
  },
  "advancedWebAgentConfig": {
    "apacheAuthDirectives": null,
    "clientHostnameHeader": null,
    "clientIpHeader": null,
    "customProperties": [],
    "fragmentRedirectEnabled": false,
    "hostnameToIpAddress": [],
    "logonAndImpersonation": false,
    "overrideRequestHost": false,
    "overrideRequestPort": false,
    "overrideRequestProtocol": false,
    "pdpJavascriptRepost": false,
    "pdpSkipPostUrl": [
      "",
    ],
    "pdpStickySessionCookieName": null,
    "pdpStickySessionMode": "OFF",
    "pdpStickySessionValue": null,
    "postDataCachePeriod": 10,
    "postDataPreservation": false,
    "replayPasswordKey": null,
    "retainSessionCache": false,
    "showPasswordInHeader": false,
  },
  "amServicesWebAgent": {
    "amLoginUrl": [],
    "amLogoutUrl": [
      "http://testserverurl.com:8080/UI/Logout",
    ],
    "applicationLogoutUrls": [
      "",
    ],
    "conditionalLoginUrl": [
      "",
    ],
    "customLoginMode": 0,
    "enableLogoutRegex": false,
    "fetchPoliciesFromRootResource": false,
    "invalidateLogoutSession": true,
    "logoutRedirectDisabled": false,
    "logoutRedirectUrl": null,
    "logoutResetCookies": [
      "",
    ],
    "logoutUrlRegex": null,
    "policyCachePollingInterval": 3,
    "policyClockSkew": 0,
    "policyEvaluationApplication": "iPlanetAMWebAgentService",
    "policyEvaluationRealm": "/",
    "publicAmUrl": null,
    "regexConditionalLoginPattern": [
      "",
    ],
    "regexConditionalLoginUrl": [
      "",
    ],
    "retrieveClientHostname": false,
    "ssoCachePollingInterval": 3,
    "userIdParameter": "UserToken",
    "userIdParameterType": "session",
  },
  "applicationWebAgentConfig": {
    "attributeMultiValueSeparator": "|",
    "clientIpValidation": false,
    "continuousSecurityCookies": {},
    "continuousSecurityHeaders": {},
    "fetchAttributesForNotEnforcedUrls": false,
    "ignorePathInfoForNotEnforcedUrls": true,
    "invertNotEnforcedUrls": false,
    "notEnforcedIps": [
      "",
    ],
    "notEnforcedIpsList": [
      "",
    ],
    "notEnforcedIpsRegex": false,
    "notEnforcedUrls": [
      "",
    ],
    "notEnforcedUrlsRegex": false,
    "profileAttributeFetchMode": "NONE",
    "profileAttributeMap": {},
    "responseAttributeFetchMode": "NONE",
    "responseAttributeMap": {},
    "sessionAttributeFetchMode": "NONE",
    "sessionAttributeMap": {},
  },
  "globalWebAgentConfig": {
    "accessDeniedUrl": null,
    "agentConfigChangeNotificationsEnabled": true,
    "agentDebugLevel": "Error",
    "agentUriPrefix": "http://testagenturl.com:8080/amagent",
    "agentgroup": null,
    "amLbCookieEnable": false,
    "auditAccessType": "LOG_NONE",
    "auditLogLocation": "REMOTE",
    "cdssoRootUrl": [
      "agentRootURL=http://testagenturl.com:8080/",
    ],
    "configurationPollingInterval": 60,
    "disableJwtAudit": false,
    "fqdnCheck": false,
    "fqdnDefault": "testagenturl.com",
    "fqdnMapping": {},
    "jwtAuditWhitelist": null,
    "jwtName": "am-auth-jwt",
    "notificationsEnabled": true,
    "repositoryLocation": "centralized",
    "resetIdleTime": false,
    "secretLabelIdentifier": null,
    "ssoOnlyMode": false,
    "status": "Inactive",
    "webSocketConnectionIntervalInMinutes": 30,
  },
  "miscWebAgentConfig": {
    "addCacheControlHeader": false,
    "anonymousUserEnabled": false,
    "anonymousUserId": "anonymous",
    "caseInsensitiveUrlComparison": true,
    "compositeAdviceEncode": false,
    "compositeAdviceRedirect": false,
    "encodeSpecialCharsInCookies": false,
    "encodeUrlSpecialCharacters": false,
    "gotoParameterName": "goto",
    "headerJsonResponse": {},
    "ignorePathInfo": false,
    "invalidUrlRegex": null,
    "invertUrlJsonResponse": false,
    "mineEncodeHeader": 0,
    "profileAttributesCookieMaxAge": 300,
    "profileAttributesCookiePrefix": "HTTP_",
    "statusCodeJsonResponse": 202,
    "urlJsonResponse": [
      "",
    ],
  },
  "ssoWebAgentConfig": {
    "acceptSsoToken": false,
    "cdssoCookieDomain": [
      "",
    ],
    "cdssoRedirectUri": "agent/cdsso-oauth2",
    "cookieName": "iPlanetDirectoryPro",
    "cookieResetEnabled": false,
    "cookieResetList": [
      "",
    ],
    "cookieResetOnRedirect": false,
    "httpOnly": true,
    "multivaluePreAuthnCookie": false,
    "persistentJwtCookie": false,
    "sameSite": null,
    "secureCookies": false,
  },
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir0": should export all agents from all realms in fr-config manager style.: configManagerExportOauth2AgentsDir0/realms/alpha/realm-config/agents/WebAgent/frodo-test-web-agent2.json 1`] = `
{
  "_id": "frodo-test-web-agent2",
  "_rev": "930101313",
  "_type": {
    "_id": "WebAgent",
    "collection": true,
    "name": "Web Agents",
  },
  "advancedWebAgentConfig": {
    "apacheAuthDirectives": null,
    "clientHostnameHeader": null,
    "clientIpHeader": null,
    "customProperties": [],
    "fragmentRedirectEnabled": false,
    "hostnameToIpAddress": [],
    "logonAndImpersonation": false,
    "overrideRequestHost": false,
    "overrideRequestPort": false,
    "overrideRequestProtocol": false,
    "pdpJavascriptRepost": false,
    "pdpSkipPostUrl": [
      "",
    ],
    "pdpStickySessionCookieName": null,
    "pdpStickySessionMode": "OFF",
    "pdpStickySessionValue": null,
    "postDataCachePeriod": 10,
    "postDataPreservation": false,
    "replayPasswordKey": null,
    "retainSessionCache": false,
    "showPasswordInHeader": false,
  },
  "amServicesWebAgent": {
    "amLoginUrl": [],
    "amLogoutUrl": [
      "http://testserverurl.com:8080/UI/Logout",
    ],
    "applicationLogoutUrls": [
      "",
    ],
    "conditionalLoginUrl": [
      "",
    ],
    "customLoginMode": 0,
    "enableLogoutRegex": false,
    "fetchPoliciesFromRootResource": false,
    "invalidateLogoutSession": true,
    "logoutRedirectDisabled": false,
    "logoutRedirectUrl": null,
    "logoutResetCookies": [
      "",
    ],
    "logoutUrlRegex": null,
    "policyCachePollingInterval": 3,
    "policyClockSkew": 0,
    "policyEvaluationApplication": "iPlanetAMWebAgentService",
    "policyEvaluationRealm": "/",
    "publicAmUrl": null,
    "regexConditionalLoginPattern": [
      "",
    ],
    "regexConditionalLoginUrl": [
      "",
    ],
    "retrieveClientHostname": false,
    "ssoCachePollingInterval": 3,
    "userIdParameter": "UserToken",
    "userIdParameterType": "session",
  },
  "applicationWebAgentConfig": {
    "attributeMultiValueSeparator": "|",
    "clientIpValidation": false,
    "continuousSecurityCookies": {},
    "continuousSecurityHeaders": {},
    "fetchAttributesForNotEnforcedUrls": false,
    "ignorePathInfoForNotEnforcedUrls": true,
    "invertNotEnforcedUrls": false,
    "notEnforcedIps": [
      "",
    ],
    "notEnforcedIpsList": [
      "",
    ],
    "notEnforcedIpsRegex": false,
    "notEnforcedUrls": [
      "",
    ],
    "notEnforcedUrlsRegex": false,
    "profileAttributeFetchMode": "NONE",
    "profileAttributeMap": {},
    "responseAttributeFetchMode": "NONE",
    "responseAttributeMap": {},
    "sessionAttributeFetchMode": "NONE",
    "sessionAttributeMap": {},
  },
  "globalWebAgentConfig": {
    "accessDeniedUrl": null,
    "agentConfigChangeNotificationsEnabled": true,
    "agentDebugLevel": "Error",
    "agentUriPrefix": "http://testagenturl.com:8080/amagent",
    "agentgroup": null,
    "amLbCookieEnable": false,
    "auditAccessType": "LOG_NONE",
    "auditLogLocation": "REMOTE",
    "cdssoRootUrl": [
      "agentRootURL=http://testagenturl.com:8080/",
    ],
    "configurationPollingInterval": 60,
    "disableJwtAudit": false,
    "fqdnCheck": false,
    "fqdnDefault": "testagenturl.com",
    "fqdnMapping": {},
    "jwtAuditWhitelist": null,
    "jwtName": "am-auth-jwt",
    "notificationsEnabled": true,
    "repositoryLocation": "centralized",
    "resetIdleTime": false,
    "secretLabelIdentifier": null,
    "ssoOnlyMode": false,
    "status": "Inactive",
    "webSocketConnectionIntervalInMinutes": 30,
  },
  "miscWebAgentConfig": {
    "addCacheControlHeader": false,
    "anonymousUserEnabled": false,
    "anonymousUserId": "anonymous",
    "caseInsensitiveUrlComparison": true,
    "compositeAdviceEncode": false,
    "compositeAdviceRedirect": false,
    "encodeSpecialCharsInCookies": false,
    "encodeUrlSpecialCharacters": false,
    "gotoParameterName": "goto",
    "headerJsonResponse": {},
    "ignorePathInfo": false,
    "invalidUrlRegex": null,
    "invertUrlJsonResponse": false,
    "mineEncodeHeader": 0,
    "profileAttributesCookieMaxAge": 300,
    "profileAttributesCookiePrefix": "HTTP_",
    "statusCodeJsonResponse": 202,
    "urlJsonResponse": [
      "",
    ],
  },
  "ssoWebAgentConfig": {
    "acceptSsoToken": false,
    "cdssoCookieDomain": [
      "",
    ],
    "cdssoRedirectUri": "agent/cdsso-oauth2",
    "cookieName": "iPlanetDirectoryPro",
    "cookieResetEnabled": false,
    "cookieResetList": [
      "",
    ],
    "cookieResetOnRedirect": false,
    "httpOnly": true,
    "multivaluePreAuthnCookie": false,
    "persistentJwtCookie": false,
    "sameSite": null,
    "secureCookies": false,
  },
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir1 -r alpha": should export all agents in the alpha realm in fr-config manager style. 1`] = `0`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir1 -r alpha": should export all agents in the alpha realm in fr-config manager style. 2`] = `""`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir1 -r alpha": should export all agents in the alpha realm in fr-config manager style.: configManagerExportOauth2AgentsDir1/realms/alpha/realm-config/agents/2.2_Agent/my-policy-agent.json 1`] = `
{
  "_id": "my-policy-agent",
  "_rev": "-504717871",
  "_type": {
    "_id": "2.2_Agent",
    "collection": true,
    "name": "Policy Agents",
  },
  "cdssoRootUrl": [],
  "description": null,
  "status": "Active",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir1 -r alpha": should export all agents in the alpha realm in fr-config manager style.: configManagerExportOauth2AgentsDir1/realms/alpha/realm-config/agents/IdentityGatewayAgent/cdsso-ig-agent.json 1`] = `
{
  "_id": "cdsso-ig-agent",
  "_rev": "-1524382492",
  "_type": {
    "_id": "IdentityGatewayAgent",
    "collection": true,
    "name": "Identity Gateway Agents",
  },
  "agentgroup": null,
  "igCdssoLoginUrlTemplate": null,
  "igCdssoRedirectUrls": [
    "https://volker-demo.encore.forgerock.com:443/apps/hrlite/redirect",
    "https://volker-demo.encore.forgerock.com/apps/hrlite/redirect",
    "https://volker-demo.encore.forgerock.com:443/apps/hrlite-rest/redirect",
    "https://volker-demo.encore.forgerock.com:443/apps/contractor/redirect",
    "https://volker-demo.encore.forgerock.com/apps/hrlite-rest/redirect",
    "https://volker-demo.encore.forgerock.com/apps/contractor/redirect",
  ],
  "igTokenIntrospection": "Realm_Subs",
  "secretLabelIdentifier": null,
  "status": "Active",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir1 -r alpha": should export all agents in the alpha realm in fr-config manager style.: configManagerExportOauth2AgentsDir1/realms/alpha/realm-config/agents/IdentityGatewayAgent/frodo-test-ig-agent.json 1`] = `
{
  "_id": "frodo-test-ig-agent",
  "_rev": "-1490423122",
  "_type": {
    "_id": "IdentityGatewayAgent",
    "collection": true,
    "name": "Identity Gateway Agents",
  },
  "agentgroup": "test_ig_group",
  "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
  "igCdssoRedirectUrls": [
    "http://testurl.com:8080/frodo",
  ],
  "igTokenIntrospection": "Realm",
  "secretLabelIdentifier": null,
  "status": "Inactive",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir1 -r alpha": should export all agents in the alpha realm in fr-config manager style.: configManagerExportOauth2AgentsDir1/realms/alpha/realm-config/agents/IdentityGatewayAgent/frodo-test-ig-agent2.json 1`] = `
{
  "_id": "frodo-test-ig-agent2",
  "_rev": "1365023305",
  "_type": {
    "_id": "IdentityGatewayAgent",
    "collection": true,
    "name": "Identity Gateway Agents",
  },
  "agentgroup": null,
  "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
  "igCdssoRedirectUrls": [
    "http://testurl.com:8080/frodo",
  ],
  "igTokenIntrospection": "Realm",
  "secretLabelIdentifier": null,
  "status": "Inactive",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir1 -r alpha": should export all agents in the alpha realm in fr-config manager style.: configManagerExportOauth2AgentsDir1/realms/alpha/realm-config/agents/IdentityGatewayAgent/ig-agent.json 1`] = `
{
  "_id": "ig-agent",
  "_rev": "-1566320906",
  "_type": {
    "_id": "IdentityGatewayAgent",
    "collection": true,
    "name": "Identity Gateway Agents",
  },
  "agentgroup": null,
  "igCdssoLoginUrlTemplate": null,
  "igCdssoRedirectUrls": [],
  "igTokenIntrospection": "Realm_Subs",
  "secretLabelIdentifier": null,
  "status": "Active",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir1 -r alpha": should export all agents in the alpha realm in fr-config manager style.: configManagerExportOauth2AgentsDir1/realms/alpha/realm-config/agents/J2EEAgent/frodo-test-java-agent.json 1`] = `
{
  "_id": "frodo-test-java-agent",
  "_rev": "1131793354",
  "_type": {
    "_id": "J2EEAgent",
    "collection": true,
    "name": "J2EE Agents",
  },
  "advancedJ2EEAgentConfig": {
    "alternativeAgentHostname": null,
    "alternativeAgentPort": null,
    "alternativeAgentProtocol": null,
    "clientHostnameHeader": null,
    "clientIpHeader": null,
    "customProperties": [],
    "expiredSessionCacheSize": 500,
    "expiredSessionCacheTTL": 20,
    "fragmentRelayUri": null,
    "idleTimeRefreshWindow": 1,
    "jwtCacheSize": 5000,
    "jwtCacheTTL": 30,
    "missingPostDataPreservationEntryUri": [
      "",
    ],
    "monitoringToCSV": false,
    "policyCachePerUser": 50,
    "policyCacheSize": 5000,
    "policyClientPollingInterval": 3,
    "possibleXssCodeElements": [
      "",
    ],
    "postDataCacheTtlMin": 5,
    "postDataPreservation": false,
    "postDataPreserveCacheEntryMaxEntries": 1000,
    "postDataPreserveCacheEntryMaxTotalSizeMb": -1,
    "postDataPreserveMultipartLimitBytes": 104857600,
    "postDataPreserveMultipartParameterLimitBytes": 104857600,
    "postDataStickySessionKeyValue": null,
    "postDataStickySessionMode": "URL",
    "retainPreviousOverrideBehavior": true,
    "sessionCacheTTL": 15,
    "ssoExchangeCacheSize": 100,
    "ssoExchangeCacheTTL": 5,
    "xssDetectionRedirectUri": {},
  },
  "amServicesJ2EEAgent": {
    "agentAdviceEncode": false,
    "amLoginUrl": [],
    "authServiceHost": "testurl.com",
    "authServicePort": 8080,
    "authServiceProtocol": "http",
    "authSuccessRedirectUrl": false,
    "conditionalLoginUrl": [
      "",
    ],
    "conditionalLogoutUrl": [
      "",
    ],
    "customLoginEnabled": false,
    "legacyLoginUrlList": [
      "",
    ],
    "overridePolicyEvaluationRealmEnabled": false,
    "policyEvaluationApplication": "iPlanetAMWebAgentService",
    "policyEvaluationRealm": "/",
    "policyNotifications": true,
    "restrictToRealm": {},
    "strategyWhenAMUnavailable": "EVAL_NER_USE_CACHE_UNTIL_EXPIRED_ELSE_503",
    "urlPolicyEnvGetParameters": [
      "",
    ],
    "urlPolicyEnvJsessionParameters": [
      "",
    ],
    "urlPolicyEnvPostParameters": [
      "",
    ],
  },
  "applicationJ2EEAgentConfig": {
    "applicationLogoutUris": {},
    "clientIpValidationMode": {
      "": "OFF",
    },
    "clientIpValidationRange": {},
    "continuousSecurityCookies": {},
    "continuousSecurityHeaders": {},
    "cookieAttributeMultiValueSeparator": "|",
    "cookieAttributeUrlEncoded": true,
    "headerAttributeDateFormat": "EEE, d MMM yyyy hh:mm:ss z",
    "invertNotEnforcedIps": false,
    "invertNotEnforcedUris": false,
    "logoutEntryUri": {},
    "logoutIntrospection": false,
    "logoutRequestParameters": {},
    "notEnforcedFavicon": true,
    "notEnforcedIps": [
      "",
    ],
    "notEnforcedIpsCacheEnabled": true,
    "notEnforcedIpsCacheSize": 1000,
    "notEnforcedRuleCompoundSeparator": "|",
    "notEnforcedUris": [
      "",
    ],
    "notEnforcedUrisCacheEnabled": true,
    "notEnforcedUrisCacheSize": 1000,
    "profileAttributeFetchMode": "NONE",
    "profileAttributeMap": {},
    "resourceAccessDeniedUri": {},
    "responseAttributeFetchMode": "NONE",
    "responseAttributeMap": {},
    "sessionAttributeFetchMode": "NONE",
    "sessionAttributeMap": {},
  },
  "globalJ2EEAgentConfig": {
    "agentConfigChangeNotificationsEnabled": true,
    "agentgroup": null,
    "auditAccessType": "LOG_NONE",
    "auditLogLocation": "REMOTE",
    "cdssoRootUrl": [
      "agentRootURL=http://testurl.com:8080/",
    ],
    "configurationReloadInterval": 0,
    "customResponseHeader": {},
    "debugLevel": "error",
    "debugLogfilePrefix": null,
    "debugLogfileRetentionCount": -1,
    "debugLogfileRotationMinutes": -1,
    "debugLogfileRotationSize": 52428800,
    "debugLogfileSuffix": "-yyyy.MM.dd-HH.mm.ss",
    "filterMode": {
      "": "ALL",
    },
    "fqdnCheck": false,
    "fqdnDefault": "testurl.com",
    "fqdnMapping": {},
    "httpSessionBinding": true,
    "jwtName": "am-auth-jwt",
    "lbCookieEnabled": false,
    "lbCookieName": "amlbcookie",
    "localAuditLogRotation": false,
    "localAuditLogfileRetentionCount": -1,
    "localAuditRotationSize": 52428800,
    "loginAttemptLimit": 0,
    "loginAttemptLimitCookieName": "amFilterParam",
    "preAuthCookieMaxAge": 300,
    "preAuthCookieName": "amFilterCDSSORequest",
    "recheckAmUnavailabilityInSeconds": 5,
    "redirectAttemptLimit": 0,
    "redirectAttemptLimitCookieName": "amFilterRDParam",
    "repositoryLocation": "centralized",
    "secretLabelIdentifier": null,
    "status": "Inactive",
    "userAttributeName": "employeenumber",
    "userMappingMode": "USER_ID",
    "userPrincipalFlag": false,
    "userTokenName": "UserToken",
    "webSocketConnectionIntervalInMinutes": 30,
  },
  "miscJ2EEAgentConfig": {
    "agent302RedirectContentType": "application/json",
    "agent302RedirectEnabled": true,
    "agent302RedirectHttpData": "{redirect:{requestUri:%REQUEST_URI%,requestUrl:%REQUEST_URL%,targetUrl:%TARGET%}}",
    "agent302RedirectInvertEnabled": false,
    "agent302RedirectNerList": [
      "",
    ],
    "agent302RedirectStatusCode": 200,
    "authFailReasonParameterName": null,
    "authFailReasonParameterRemapper": {},
    "authFailReasonUrl": null,
    "gotoParameterName": "goto",
    "gotoUrl": null,
    "ignorePathInfo": false,
    "legacyRedirectUri": "/agent/sunwLegacySupportURI",
    "legacyUserAgentList": [
      "Mozilla/4.7*",
    ],
    "legacyUserAgentSupport": false,
    "localeCountry": "US",
    "localeLanguage": "en",
    "loginReasonMap": {},
    "loginReasonParameterName": null,
    "portCheckEnabled": false,
    "portCheckFile": "PortCheckContent.txt",
    "portCheckSetting": {
      "8080": "http",
    },
    "unwantedHttpUrlParams": [
      "",
    ],
    "unwantedHttpUrlRegexParams": [
      "",
    ],
    "wantedHttpUrlParams": [
      "",
    ],
    "wantedHttpUrlRegexParams": [
      "",
    ],
  },
  "ssoJ2EEAgentConfig": {
    "acceptIPDPCookie": false,
    "acceptSsoTokenDomainList": [
      "",
    ],
    "acceptSsoTokenEnabled": false,
    "authExchangeCookieName": null,
    "authExchangeUri": null,
    "cdssoDomainList": [
      "",
    ],
    "cdssoRedirectUri": "/agent/post-authn-redirect",
    "cdssoSecureCookies": false,
    "cookieResetDomains": {},
    "cookieResetEnabled": false,
    "cookieResetNames": [
      "",
    ],
    "cookieResetPaths": {},
    "encodeCookies": false,
    "excludedUserAgentsList": [],
    "httpOnly": true,
    "setCookieAttributeMap": {},
    "setCookieInternalMap": {},
  },
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir1 -r alpha": should export all agents in the alpha realm in fr-config manager style.: configManagerExportOauth2AgentsDir1/realms/alpha/realm-config/agents/J2EEAgent/frodo-test-java-agent2.json 1`] = `
{
  "_id": "frodo-test-java-agent2",
  "_rev": "561894916",
  "_type": {
    "_id": "J2EEAgent",
    "collection": true,
    "name": "J2EE Agents",
  },
  "advancedJ2EEAgentConfig": {
    "alternativeAgentHostname": null,
    "alternativeAgentPort": null,
    "alternativeAgentProtocol": null,
    "clientHostnameHeader": null,
    "clientIpHeader": null,
    "customProperties": [],
    "expiredSessionCacheSize": 500,
    "expiredSessionCacheTTL": 20,
    "fragmentRelayUri": null,
    "idleTimeRefreshWindow": 1,
    "jwtCacheSize": 5000,
    "jwtCacheTTL": 30,
    "missingPostDataPreservationEntryUri": [
      "",
    ],
    "monitoringToCSV": false,
    "policyCachePerUser": 50,
    "policyCacheSize": 5000,
    "policyClientPollingInterval": 3,
    "possibleXssCodeElements": [
      "",
    ],
    "postDataCacheTtlMin": 5,
    "postDataPreservation": false,
    "postDataPreserveCacheEntryMaxEntries": 1000,
    "postDataPreserveCacheEntryMaxTotalSizeMb": -1,
    "postDataPreserveMultipartLimitBytes": 104857600,
    "postDataPreserveMultipartParameterLimitBytes": 104857600,
    "postDataStickySessionKeyValue": null,
    "postDataStickySessionMode": "URL",
    "retainPreviousOverrideBehavior": true,
    "sessionCacheTTL": 15,
    "ssoExchangeCacheSize": 100,
    "ssoExchangeCacheTTL": 5,
    "xssDetectionRedirectUri": {},
  },
  "amServicesJ2EEAgent": {
    "agentAdviceEncode": false,
    "amLoginUrl": [],
    "authServiceHost": "testurl.com",
    "authServicePort": 8080,
    "authServiceProtocol": "http",
    "authSuccessRedirectUrl": false,
    "conditionalLoginUrl": [
      "",
    ],
    "conditionalLogoutUrl": [
      "",
    ],
    "customLoginEnabled": false,
    "legacyLoginUrlList": [
      "",
    ],
    "overridePolicyEvaluationRealmEnabled": false,
    "policyEvaluationApplication": "iPlanetAMWebAgentService",
    "policyEvaluationRealm": "/",
    "policyNotifications": true,
    "restrictToRealm": {},
    "strategyWhenAMUnavailable": "EVAL_NER_USE_CACHE_UNTIL_EXPIRED_ELSE_503",
    "urlPolicyEnvGetParameters": [
      "",
    ],
    "urlPolicyEnvJsessionParameters": [
      "",
    ],
    "urlPolicyEnvPostParameters": [
      "",
    ],
  },
  "applicationJ2EEAgentConfig": {
    "applicationLogoutUris": {},
    "clientIpValidationMode": {
      "": "OFF",
    },
    "clientIpValidationRange": {},
    "continuousSecurityCookies": {},
    "continuousSecurityHeaders": {},
    "cookieAttributeMultiValueSeparator": "|",
    "cookieAttributeUrlEncoded": true,
    "headerAttributeDateFormat": "EEE, d MMM yyyy hh:mm:ss z",
    "invertNotEnforcedIps": false,
    "invertNotEnforcedUris": false,
    "logoutEntryUri": {},
    "logoutIntrospection": false,
    "logoutRequestParameters": {},
    "notEnforcedFavicon": true,
    "notEnforcedIps": [
      "",
    ],
    "notEnforcedIpsCacheEnabled": true,
    "notEnforcedIpsCacheSize": 1000,
    "notEnforcedRuleCompoundSeparator": "|",
    "notEnforcedUris": [
      "",
    ],
    "notEnforcedUrisCacheEnabled": true,
    "notEnforcedUrisCacheSize": 1000,
    "profileAttributeFetchMode": "NONE",
    "profileAttributeMap": {},
    "resourceAccessDeniedUri": {},
    "responseAttributeFetchMode": "NONE",
    "responseAttributeMap": {},
    "sessionAttributeFetchMode": "NONE",
    "sessionAttributeMap": {},
  },
  "globalJ2EEAgentConfig": {
    "agentConfigChangeNotificationsEnabled": true,
    "agentgroup": null,
    "auditAccessType": "LOG_NONE",
    "auditLogLocation": "REMOTE",
    "cdssoRootUrl": [
      "agentRootURL=http://testurl.com:8080/",
    ],
    "configurationReloadInterval": 0,
    "customResponseHeader": {},
    "debugLevel": "error",
    "debugLogfilePrefix": null,
    "debugLogfileRetentionCount": -1,
    "debugLogfileRotationMinutes": -1,
    "debugLogfileRotationSize": 52428800,
    "debugLogfileSuffix": "-yyyy.MM.dd-HH.mm.ss",
    "filterMode": {
      "": "ALL",
    },
    "fqdnCheck": false,
    "fqdnDefault": "testurl.com",
    "fqdnMapping": {},
    "httpSessionBinding": true,
    "jwtName": "am-auth-jwt",
    "lbCookieEnabled": false,
    "lbCookieName": "amlbcookie",
    "localAuditLogRotation": false,
    "localAuditLogfileRetentionCount": -1,
    "localAuditRotationSize": 52428800,
    "loginAttemptLimit": 0,
    "loginAttemptLimitCookieName": "amFilterParam",
    "preAuthCookieMaxAge": 300,
    "preAuthCookieName": "amFilterCDSSORequest",
    "recheckAmUnavailabilityInSeconds": 5,
    "redirectAttemptLimit": 0,
    "redirectAttemptLimitCookieName": "amFilterRDParam",
    "repositoryLocation": "centralized",
    "secretLabelIdentifier": null,
    "status": "Inactive",
    "userAttributeName": "employeenumber",
    "userMappingMode": "USER_ID",
    "userPrincipalFlag": false,
    "userTokenName": "UserToken",
    "webSocketConnectionIntervalInMinutes": 30,
  },
  "miscJ2EEAgentConfig": {
    "agent302RedirectContentType": "application/json",
    "agent302RedirectEnabled": true,
    "agent302RedirectHttpData": "{redirect:{requestUri:%REQUEST_URI%,requestUrl:%REQUEST_URL%,targetUrl:%TARGET%}}",
    "agent302RedirectInvertEnabled": false,
    "agent302RedirectNerList": [
      "",
    ],
    "agent302RedirectStatusCode": 200,
    "authFailReasonParameterName": null,
    "authFailReasonParameterRemapper": {},
    "authFailReasonUrl": null,
    "gotoParameterName": "goto",
    "gotoUrl": null,
    "ignorePathInfo": false,
    "legacyRedirectUri": "/agent/sunwLegacySupportURI",
    "legacyUserAgentList": [
      "Mozilla/4.7*",
    ],
    "legacyUserAgentSupport": false,
    "localeCountry": "US",
    "localeLanguage": "en",
    "loginReasonMap": {},
    "loginReasonParameterName": null,
    "portCheckEnabled": false,
    "portCheckFile": "PortCheckContent.txt",
    "portCheckSetting": {
      "8080": "http",
    },
    "unwantedHttpUrlParams": [
      "",
    ],
    "unwantedHttpUrlRegexParams": [
      "",
    ],
    "wantedHttpUrlParams": [
      "",
    ],
    "wantedHttpUrlRegexParams": [
      "",
    ],
  },
  "ssoJ2EEAgentConfig": {
    "acceptIPDPCookie": false,
    "acceptSsoTokenDomainList": [
      "",
    ],
    "acceptSsoTokenEnabled": false,
    "authExchangeCookieName": null,
    "authExchangeUri": null,
    "cdssoDomainList": [
      "",
    ],
    "cdssoRedirectUri": "/agent/post-authn-redirect",
    "cdssoSecureCookies": false,
    "cookieResetDomains": {},
    "cookieResetEnabled": false,
    "cookieResetNames": [
      "",
    ],
    "cookieResetPaths": {},
    "encodeCookies": false,
    "excludedUserAgentsList": [],
    "httpOnly": true,
    "setCookieAttributeMap": {},
    "setCookieInternalMap": {},
  },
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir1 -r alpha": should export all agents in the alpha realm in fr-config manager style.: configManagerExportOauth2AgentsDir1/realms/alpha/realm-config/agents/RemoteConsentAgent/test.json 1`] = `
{
  "_id": "test",
  "_rev": "-1262869401",
  "_type": {
    "_id": "RemoteConsentAgent",
    "collection": true,
    "name": "OAuth2 Remote Consent Service",
  },
  "agentgroup": null,
  "jwkSet": null,
  "jwkStoreCacheMissCacheTime": 60000,
  "jwksCacheTimeout": 3600000,
  "jwksUri": null,
  "metadataUrl": null,
  "publicKeyLocation": "jwks_uri",
  "pushedConsentAuthenticationMethod": "None",
  "pushedConsentRequestUrl": null,
  "remoteConsentRedirectUrl": null,
  "remoteConsentRequestEncryptionAlgorithm": "RSA-OAEP-256",
  "remoteConsentRequestEncryptionEnabled": true,
  "remoteConsentRequestEncryptionMethod": "A128GCM",
  "remoteConsentRequestSigningAlgorithm": "RS256",
  "remoteConsentResponseEncryptionAlgorithm": "RSA-OAEP-256",
  "remoteConsentResponseEncryptionMethod": "A128GCM",
  "remoteConsentResponseSigningAlg": "RS256",
  "requestTimeLimit": 180,
  "resourceOwnerSessionProperties": {},
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir1 -r alpha": should export all agents in the alpha realm in fr-config manager style.: configManagerExportOauth2AgentsDir1/realms/alpha/realm-config/agents/SoftwarePublisher/test software publisher.json 1`] = `
{
  "_id": "test software publisher",
  "_rev": "1510799304",
  "_type": {
    "_id": "SoftwarePublisher",
    "collection": true,
    "name": "OAuth2 Software Publisher",
  },
  "agentgroup": null,
  "issuer": null,
  "jwkSet": null,
  "jwkStoreCacheMissCacheTime": 60000,
  "jwksCacheTimeout": 3600000,
  "jwksUri": null,
  "publicKeyLocation": "jwks_uri",
  "softwareStatementSigningAlgorithm": "RS256",
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir1 -r alpha": should export all agents in the alpha realm in fr-config manager style.: configManagerExportOauth2AgentsDir1/realms/alpha/realm-config/agents/WebAgent/frodo-test-web-agent.json 1`] = `
{
  "_id": "frodo-test-web-agent",
  "_rev": "218393939",
  "_type": {
    "_id": "WebAgent",
    "collection": true,
    "name": "Web Agents",
  },
  "advancedWebAgentConfig": {
    "apacheAuthDirectives": null,
    "clientHostnameHeader": null,
    "clientIpHeader": null,
    "customProperties": [],
    "fragmentRedirectEnabled": false,
    "hostnameToIpAddress": [],
    "logonAndImpersonation": false,
    "overrideRequestHost": false,
    "overrideRequestPort": false,
    "overrideRequestProtocol": false,
    "pdpJavascriptRepost": false,
    "pdpSkipPostUrl": [
      "",
    ],
    "pdpStickySessionCookieName": null,
    "pdpStickySessionMode": "OFF",
    "pdpStickySessionValue": null,
    "postDataCachePeriod": 10,
    "postDataPreservation": false,
    "replayPasswordKey": null,
    "retainSessionCache": false,
    "showPasswordInHeader": false,
  },
  "amServicesWebAgent": {
    "amLoginUrl": [],
    "amLogoutUrl": [
      "http://testserverurl.com:8080/UI/Logout",
    ],
    "applicationLogoutUrls": [
      "",
    ],
    "conditionalLoginUrl": [
      "",
    ],
    "customLoginMode": 0,
    "enableLogoutRegex": false,
    "fetchPoliciesFromRootResource": false,
    "invalidateLogoutSession": true,
    "logoutRedirectDisabled": false,
    "logoutRedirectUrl": null,
    "logoutResetCookies": [
      "",
    ],
    "logoutUrlRegex": null,
    "policyCachePollingInterval": 3,
    "policyClockSkew": 0,
    "policyEvaluationApplication": "iPlanetAMWebAgentService",
    "policyEvaluationRealm": "/",
    "publicAmUrl": null,
    "regexConditionalLoginPattern": [
      "",
    ],
    "regexConditionalLoginUrl": [
      "",
    ],
    "retrieveClientHostname": false,
    "ssoCachePollingInterval": 3,
    "userIdParameter": "UserToken",
    "userIdParameterType": "session",
  },
  "applicationWebAgentConfig": {
    "attributeMultiValueSeparator": "|",
    "clientIpValidation": false,
    "continuousSecurityCookies": {},
    "continuousSecurityHeaders": {},
    "fetchAttributesForNotEnforcedUrls": false,
    "ignorePathInfoForNotEnforcedUrls": true,
    "invertNotEnforcedUrls": false,
    "notEnforcedIps": [
      "",
    ],
    "notEnforcedIpsList": [
      "",
    ],
    "notEnforcedIpsRegex": false,
    "notEnforcedUrls": [
      "",
    ],
    "notEnforcedUrlsRegex": false,
    "profileAttributeFetchMode": "NONE",
    "profileAttributeMap": {},
    "responseAttributeFetchMode": "NONE",
    "responseAttributeMap": {},
    "sessionAttributeFetchMode": "NONE",
    "sessionAttributeMap": {},
  },
  "globalWebAgentConfig": {
    "accessDeniedUrl": null,
    "agentConfigChangeNotificationsEnabled": true,
    "agentDebugLevel": "Error",
    "agentUriPrefix": "http://testagenturl.com:8080/amagent",
    "agentgroup": null,
    "amLbCookieEnable": false,
    "auditAccessType": "LOG_NONE",
    "auditLogLocation": "REMOTE",
    "cdssoRootUrl": [
      "agentRootURL=http://testagenturl.com:8080/",
    ],
    "configurationPollingInterval": 60,
    "disableJwtAudit": false,
    "fqdnCheck": false,
    "fqdnDefault": "testagenturl.com",
    "fqdnMapping": {},
    "jwtAuditWhitelist": null,
    "jwtName": "am-auth-jwt",
    "notificationsEnabled": true,
    "repositoryLocation": "centralized",
    "resetIdleTime": false,
    "secretLabelIdentifier": null,
    "ssoOnlyMode": false,
    "status": "Inactive",
    "webSocketConnectionIntervalInMinutes": 30,
  },
  "miscWebAgentConfig": {
    "addCacheControlHeader": false,
    "anonymousUserEnabled": false,
    "anonymousUserId": "anonymous",
    "caseInsensitiveUrlComparison": true,
    "compositeAdviceEncode": false,
    "compositeAdviceRedirect": false,
    "encodeSpecialCharsInCookies": false,
    "encodeUrlSpecialCharacters": false,
    "gotoParameterName": "goto",
    "headerJsonResponse": {},
    "ignorePathInfo": false,
    "invalidUrlRegex": null,
    "invertUrlJsonResponse": false,
    "mineEncodeHeader": 0,
    "profileAttributesCookieMaxAge": 300,
    "profileAttributesCookiePrefix": "HTTP_",
    "statusCodeJsonResponse": 202,
    "urlJsonResponse": [
      "",
    ],
  },
  "ssoWebAgentConfig": {
    "acceptSsoToken": false,
    "cdssoCookieDomain": [
      "",
    ],
    "cdssoRedirectUri": "agent/cdsso-oauth2",
    "cookieName": "iPlanetDirectoryPro",
    "cookieResetEnabled": false,
    "cookieResetList": [
      "",
    ],
    "cookieResetOnRedirect": false,
    "httpOnly": true,
    "multivaluePreAuthnCookie": false,
    "persistentJwtCookie": false,
    "sameSite": null,
    "secureCookies": false,
  },
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir1 -r alpha": should export all agents in the alpha realm in fr-config manager style.: configManagerExportOauth2AgentsDir1/realms/alpha/realm-config/agents/WebAgent/frodo-test-web-agent2.json 1`] = `
{
  "_id": "frodo-test-web-agent2",
  "_rev": "930101313",
  "_type": {
    "_id": "WebAgent",
    "collection": true,
    "name": "Web Agents",
  },
  "advancedWebAgentConfig": {
    "apacheAuthDirectives": null,
    "clientHostnameHeader": null,
    "clientIpHeader": null,
    "customProperties": [],
    "fragmentRedirectEnabled": false,
    "hostnameToIpAddress": [],
    "logonAndImpersonation": false,
    "overrideRequestHost": false,
    "overrideRequestPort": false,
    "overrideRequestProtocol": false,
    "pdpJavascriptRepost": false,
    "pdpSkipPostUrl": [
      "",
    ],
    "pdpStickySessionCookieName": null,
    "pdpStickySessionMode": "OFF",
    "pdpStickySessionValue": null,
    "postDataCachePeriod": 10,
    "postDataPreservation": false,
    "replayPasswordKey": null,
    "retainSessionCache": false,
    "showPasswordInHeader": false,
  },
  "amServicesWebAgent": {
    "amLoginUrl": [],
    "amLogoutUrl": [
      "http://testserverurl.com:8080/UI/Logout",
    ],
    "applicationLogoutUrls": [
      "",
    ],
    "conditionalLoginUrl": [
      "",
    ],
    "customLoginMode": 0,
    "enableLogoutRegex": false,
    "fetchPoliciesFromRootResource": false,
    "invalidateLogoutSession": true,
    "logoutRedirectDisabled": false,
    "logoutRedirectUrl": null,
    "logoutResetCookies": [
      "",
    ],
    "logoutUrlRegex": null,
    "policyCachePollingInterval": 3,
    "policyClockSkew": 0,
    "policyEvaluationApplication": "iPlanetAMWebAgentService",
    "policyEvaluationRealm": "/",
    "publicAmUrl": null,
    "regexConditionalLoginPattern": [
      "",
    ],
    "regexConditionalLoginUrl": [
      "",
    ],
    "retrieveClientHostname": false,
    "ssoCachePollingInterval": 3,
    "userIdParameter": "UserToken",
    "userIdParameterType": "session",
  },
  "applicationWebAgentConfig": {
    "attributeMultiValueSeparator": "|",
    "clientIpValidation": false,
    "continuousSecurityCookies": {},
    "continuousSecurityHeaders": {},
    "fetchAttributesForNotEnforcedUrls": false,
    "ignorePathInfoForNotEnforcedUrls": true,
    "invertNotEnforcedUrls": false,
    "notEnforcedIps": [
      "",
    ],
    "notEnforcedIpsList": [
      "",
    ],
    "notEnforcedIpsRegex": false,
    "notEnforcedUrls": [
      "",
    ],
    "notEnforcedUrlsRegex": false,
    "profileAttributeFetchMode": "NONE",
    "profileAttributeMap": {},
    "responseAttributeFetchMode": "NONE",
    "responseAttributeMap": {},
    "sessionAttributeFetchMode": "NONE",
    "sessionAttributeMap": {},
  },
  "globalWebAgentConfig": {
    "accessDeniedUrl": null,
    "agentConfigChangeNotificationsEnabled": true,
    "agentDebugLevel": "Error",
    "agentUriPrefix": "http://testagenturl.com:8080/amagent",
    "agentgroup": null,
    "amLbCookieEnable": false,
    "auditAccessType": "LOG_NONE",
    "auditLogLocation": "REMOTE",
    "cdssoRootUrl": [
      "agentRootURL=http://testagenturl.com:8080/",
    ],
    "configurationPollingInterval": 60,
    "disableJwtAudit": false,
    "fqdnCheck": false,
    "fqdnDefault": "testagenturl.com",
    "fqdnMapping": {},
    "jwtAuditWhitelist": null,
    "jwtName": "am-auth-jwt",
    "notificationsEnabled": true,
    "repositoryLocation": "centralized",
    "resetIdleTime": false,
    "secretLabelIdentifier": null,
    "ssoOnlyMode": false,
    "status": "Inactive",
    "webSocketConnectionIntervalInMinutes": 30,
  },
  "miscWebAgentConfig": {
    "addCacheControlHeader": false,
    "anonymousUserEnabled": false,
    "anonymousUserId": "anonymous",
    "caseInsensitiveUrlComparison": true,
    "compositeAdviceEncode": false,
    "compositeAdviceRedirect": false,
    "encodeSpecialCharsInCookies": false,
    "encodeUrlSpecialCharacters": false,
    "gotoParameterName": "goto",
    "headerJsonResponse": {},
    "ignorePathInfo": false,
    "invalidUrlRegex": null,
    "invertUrlJsonResponse": false,
    "mineEncodeHeader": 0,
    "profileAttributesCookieMaxAge": 300,
    "profileAttributesCookiePrefix": "HTTP_",
    "statusCodeJsonResponse": 202,
    "urlJsonResponse": [
      "",
    ],
  },
  "ssoWebAgentConfig": {
    "acceptSsoToken": false,
    "cdssoCookieDomain": [
      "",
    ],
    "cdssoRedirectUri": "agent/cdsso-oauth2",
    "cookieName": "iPlanetDirectoryPro",
    "cookieResetEnabled": false,
    "cookieResetList": [
      "",
    ],
    "cookieResetOnRedirect": false,
    "httpOnly": true,
    "multivaluePreAuthnCookie": false,
    "persistentJwtCookie": false,
    "sameSite": null,
    "secureCookies": false,
  },
}
`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir3 -n frodo-test-java-agent -r alpha": should export only the agent with the id: "frodo-test-java-agent". 1`] = `0`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir3 -n frodo-test-java-agent -r alpha": should export only the agent with the id: "frodo-test-java-agent". 2`] = `""`;

exports[`frodo config-manager pull oauth2-agents "frodo config-manager pull oauth2-agents -D configManagerExportOauth2AgentsDir3 -n frodo-test-java-agent -r alpha": should export only the agent with the id: "frodo-test-java-agent".: configManagerExportOauth2AgentsDir3/realms/alpha/realm-config/agents/J2EEAgent/frodo-test-java-agent.json 1`] = `
{
  "_id": "frodo-test-java-agent",
  "_rev": "1131793354",
  "_type": {
    "_id": "J2EEAgent",
    "collection": true,
    "name": "J2EE Agents",
  },
  "advancedJ2EEAgentConfig": {
    "alternativeAgentHostname": null,
    "alternativeAgentPort": null,
    "alternativeAgentProtocol": null,
    "clientHostnameHeader": null,
    "clientIpHeader": null,
    "customProperties": [],
    "expiredSessionCacheSize": 500,
    "expiredSessionCacheTTL": 20,
    "fragmentRelayUri": null,
    "idleTimeRefreshWindow": 1,
    "jwtCacheSize": 5000,
    "jwtCacheTTL": 30,
    "missingPostDataPreservationEntryUri": [
      "",
    ],
    "monitoringToCSV": false,
    "policyCachePerUser": 50,
    "policyCacheSize": 5000,
    "policyClientPollingInterval": 3,
    "possibleXssCodeElements": [
      "",
    ],
    "postDataCacheTtlMin": 5,
    "postDataPreservation": false,
    "postDataPreserveCacheEntryMaxEntries": 1000,
    "postDataPreserveCacheEntryMaxTotalSizeMb": -1,
    "postDataPreserveMultipartLimitBytes": 104857600,
    "postDataPreserveMultipartParameterLimitBytes": 104857600,
    "postDataStickySessionKeyValue": null,
    "postDataStickySessionMode": "URL",
    "retainPreviousOverrideBehavior": true,
    "sessionCacheTTL": 15,
    "ssoExchangeCacheSize": 100,
    "ssoExchangeCacheTTL": 5,
    "xssDetectionRedirectUri": {},
  },
  "amServicesJ2EEAgent": {
    "agentAdviceEncode": false,
    "amLoginUrl": [],
    "authServiceHost": "testurl.com",
    "authServicePort": 8080,
    "authServiceProtocol": "http",
    "authSuccessRedirectUrl": false,
    "conditionalLoginUrl": [
      "",
    ],
    "conditionalLogoutUrl": [
      "",
    ],
    "customLoginEnabled": false,
    "legacyLoginUrlList": [
      "",
    ],
    "overridePolicyEvaluationRealmEnabled": false,
    "policyEvaluationApplication": "iPlanetAMWebAgentService",
    "policyEvaluationRealm": "/",
    "policyNotifications": true,
    "restrictToRealm": {},
    "strategyWhenAMUnavailable": "EVAL_NER_USE_CACHE_UNTIL_EXPIRED_ELSE_503",
    "urlPolicyEnvGetParameters": [
      "",
    ],
    "urlPolicyEnvJsessionParameters": [
      "",
    ],
    "urlPolicyEnvPostParameters": [
      "",
    ],
  },
  "applicationJ2EEAgentConfig": {
    "applicationLogoutUris": {},
    "clientIpValidationMode": {
      "": "OFF",
    },
    "clientIpValidationRange": {},
    "continuousSecurityCookies": {},
    "continuousSecurityHeaders": {},
    "cookieAttributeMultiValueSeparator": "|",
    "cookieAttributeUrlEncoded": true,
    "headerAttributeDateFormat": "EEE, d MMM yyyy hh:mm:ss z",
    "invertNotEnforcedIps": false,
    "invertNotEnforcedUris": false,
    "logoutEntryUri": {},
    "logoutIntrospection": false,
    "logoutRequestParameters": {},
    "notEnforcedFavicon": true,
    "notEnforcedIps": [
      "",
    ],
    "notEnforcedIpsCacheEnabled": true,
    "notEnforcedIpsCacheSize": 1000,
    "notEnforcedRuleCompoundSeparator": "|",
    "notEnforcedUris": [
      "",
    ],
    "notEnforcedUrisCacheEnabled": true,
    "notEnforcedUrisCacheSize": 1000,
    "profileAttributeFetchMode": "NONE",
    "profileAttributeMap": {},
    "resourceAccessDeniedUri": {},
    "responseAttributeFetchMode": "NONE",
    "responseAttributeMap": {},
    "sessionAttributeFetchMode": "NONE",
    "sessionAttributeMap": {},
  },
  "globalJ2EEAgentConfig": {
    "agentConfigChangeNotificationsEnabled": true,
    "agentgroup": null,
    "auditAccessType": "LOG_NONE",
    "auditLogLocation": "REMOTE",
    "cdssoRootUrl": [
      "agentRootURL=http://testurl.com:8080/",
    ],
    "configurationReloadInterval": 0,
    "customResponseHeader": {},
    "debugLevel": "error",
    "debugLogfilePrefix": null,
    "debugLogfileRetentionCount": -1,
    "debugLogfileRotationMinutes": -1,
    "debugLogfileRotationSize": 52428800,
    "debugLogfileSuffix": "-yyyy.MM.dd-HH.mm.ss",
    "filterMode": {
      "": "ALL",
    },
    "fqdnCheck": false,
    "fqdnDefault": "testurl.com",
    "fqdnMapping": {},
    "httpSessionBinding": true,
    "jwtName": "am-auth-jwt",
    "lbCookieEnabled": false,
    "lbCookieName": "amlbcookie",
    "localAuditLogRotation": false,
    "localAuditLogfileRetentionCount": -1,
    "localAuditRotationSize": 52428800,
    "loginAttemptLimit": 0,
    "loginAttemptLimitCookieName": "amFilterParam",
    "preAuthCookieMaxAge": 300,
    "preAuthCookieName": "amFilterCDSSORequest",
    "recheckAmUnavailabilityInSeconds": 5,
    "redirectAttemptLimit": 0,
    "redirectAttemptLimitCookieName": "amFilterRDParam",
    "repositoryLocation": "centralized",
    "secretLabelIdentifier": null,
    "status": "Inactive",
    "userAttributeName": "employeenumber",
    "userMappingMode": "USER_ID",
    "userPrincipalFlag": false,
    "userTokenName": "UserToken",
    "webSocketConnectionIntervalInMinutes": 30,
  },
  "miscJ2EEAgentConfig": {
    "agent302RedirectContentType": "application/json",
    "agent302RedirectEnabled": true,
    "agent302RedirectHttpData": "{redirect:{requestUri:%REQUEST_URI%,requestUrl:%REQUEST_URL%,targetUrl:%TARGET%}}",
    "agent302RedirectInvertEnabled": false,
    "agent302RedirectNerList": [
      "",
    ],
    "agent302RedirectStatusCode": 200,
    "authFailReasonParameterName": null,
    "authFailReasonParameterRemapper": {},
    "authFailReasonUrl": null,
    "gotoParameterName": "goto",
    "gotoUrl": null,
    "ignorePathInfo": false,
    "legacyRedirectUri": "/agent/sunwLegacySupportURI",
    "legacyUserAgentList": [
      "Mozilla/4.7*",
    ],
    "legacyUserAgentSupport": false,
    "localeCountry": "US",
    "localeLanguage": "en",
    "loginReasonMap": {},
    "loginReasonParameterName": null,
    "portCheckEnabled": false,
    "portCheckFile": "PortCheckContent.txt",
    "portCheckSetting": {
      "8080": "http",
    },
    "unwantedHttpUrlParams": [
      "",
    ],
    "unwantedHttpUrlRegexParams": [
      "",
    ],
    "wantedHttpUrlParams": [
      "",
    ],
    "wantedHttpUrlRegexParams": [
      "",
    ],
  },
  "ssoJ2EEAgentConfig": {
    "acceptIPDPCookie": false,
    "acceptSsoTokenDomainList": [
      "",
    ],
    "acceptSsoTokenEnabled": false,
    "authExchangeCookieName": null,
    "authExchangeUri": null,
    "cdssoDomainList": [
      "",
    ],
    "cdssoRedirectUri": "/agent/post-authn-redirect",
    "cdssoSecureCookies": false,
    "cookieResetDomains": {},
    "cookieResetEnabled": false,
    "cookieResetNames": [
      "",
    ],
    "cookieResetPaths": {},
    "encodeCookies": false,
    "excludedUserAgentsList": [],
    "httpOnly": true,
    "setCookieAttributeMap": {},
    "setCookieInternalMap": {},
  },
}
`;
